--- a/posts/2016-01-04.md
+++ b/posts/2016-01-04.md
@@ -1,12 +1,12 @@
 ## Fast Serialization in Rust
 
-This post is a technical follow-up to [a previous post]() on the [Abomonation]() serialization library. The library is pretty simple (it is about 400 lines of Rust, including comments, examples, and some tests), but it does what I think are some pretty interesting things. Mostly, the interesting things are cute ways of working with Rust's borrowing behavior to provide zero copy deserialization for complex types containing owned memory. 
+This post is a technical follow-up to [a previous post]() on the [Abomonation]() serialization library. The library is pretty simple (it is about 400 lines of Rust, including comments, examples, and some tests), but it does what I think are some pretty interesting things. Mostly, the interesting things are cute ways of working with Rust's borrowing behavior to provide zero copy deserialization for complex types containing owned memory.
 
 ### Rust programs
 
 Rust is commonly thought of as a "hard" language. Invariably this comes down to Rust's very demanding approach to **ownership** and **borrowing**.
 
-Rust programs superficially look much like other programs in other languages. Here is an example where I define a new struct `Book`, a method for creating new books, and some suggestive code where I create and list a library of most excellent books. 
+Rust programs superficially look much like other programs in other languages. Here is an example where I define a new struct `Book`, a method for creating new books, and some suggestive code where I create and list a library of most excellent books.
 
 ```rust
 struct Book {
@@ -41,7 +41,7 @@ main() {
 }
 ```
 
-This really doesn't look that bad does it? It probably looks superficially similar to the way you might do this in any other non-turtle orientied language.
+This really doesn't look that bad does it? It probably looks superficially similar to the way you might do this in any other non-turtle oriented language.
 
 My experience with Rust has been that it really can be quite simple when you are doing fairly simple things. Complexity gets added progressively, in the sense that as soon as you accidentally run afoul of ownership and borrowing you hit a wall and come to a complete stop. 
 
@@ -51,13 +51,13 @@ The good news is that though repeated forehead application the ownership and bor
 
 Each instance of data in a Rust program has a unique owner. This owner can be a variable binding (like `library` in the example above) or it can be some other owned data. In the example above, the string `"The Dying Earth"` is owned by the `Book` instance it was used in, which is in turn owned by the `Vec<Book>`, which is in turn owned by `library`.
 
-An instance's owner is what keeps the instance alive. It is perhaps more like a "sponsor" in that sense. Because each instance has exactly one owner, if the owner either goes away or decides it would no longer like to own the instance, the instance can no longer be reached and should be cleaned up. This discipline isn't unique to Rust. If you are familiar with C++'s `unique_ptr` smart pointer, it does something similar: when the pointer is destroyed or set to a new value, 
+An instance's owner is what keeps the instance alive. It is perhaps more like a "sponsor" in that sense. Because each instance has exactly one owner, if the owner either goes away or decides it would no longer like to own the instance, the instance can no longer be reached and should be cleaned up. This discipline isn't unique to Rust. If you are familiar with C++'s `unique_ptr` smart pointer, it does something similar: when the pointer is destroyed or set to a new value,
 
 For example, at the end of our program `library` goes out of scope. It owned a `Vec<Book>` which should be cleaned up (memory released) once each of the `Book`s that it owns are cleaned up. Each `Book` owns two `String`s, which are themselves backed by memory that should be released.
 
 ### Movement
 
-The owner of an instance can change. To maintain the "unique owner" property Rust transfers ownership whenever an object is assigned. This invalidates the previous binding of the instance (it has been "moved"). For example, if we create a `Book` and add it to our library, we are no longer able to access it through our previous binding. 
+The owner of an instance can change. To maintain the "unique owner" property Rust transfers ownership whenever an object is assigned. This invalidates the previous binding of the instance (it has been "moved"). For example, if we create a `Book` and add it to our library, we are no longer able to access it through our previous binding.
 
 ```rust
 	// create a new book and add it to our library
@@ -84,7 +84,7 @@ Wait, "otherwise"?
 
 ### Borrowing
 
-Borrowing is what you do when you don't want ownership to change. For example, maybe I want to *show* you my library so that you can write down the names of my awesome books, but I don't want to give you ownership of the library because you'll probably nick my awesome books. 
+Borrowing is what you do when you don't want ownership to change. For example, maybe I want to *show* you my library so that you can write down the names of my awesome books, but I don't want to give you ownership of the library because you'll probably nick my awesome books.
 
 ```rust
 fn browse(library: Vec<Book>) {
