--- a/posts/2016-02-02.md
+++ b/posts/2016-02-02.md
@@ -4,7 +4,7 @@
 
 Let's work through differential dataflow's main data structure: the neat and clever way we keep track of all of the changes collections experience. We are doing this both to explain the roadmap for this part of the project, but also to explain a bit about Rust's notions of ownership and borrowing, and to give examples of where things work well and where they are a bit painful.
 
-There is much to know and learn about differential dataflow, and previous posts may be helpful with that, but for today we are just going to do something pretty localized, so ideally the surrounding complexity should just wash over us. 
+There is much to know and learn about differential dataflow, and previous posts may be helpful with that, but for today we are just going to do something pretty localized, so ideally the surrounding complexity should just wash over us.
 
 ### Starting out
 
@@ -20,7 +20,7 @@ A `HashMap<T1,T2>` is just a hash map from key of type `T1` to value of type `T2
 
 ```rust
 Vec<(T, Vec<(V, i32)>)>
-``` 
+```
 
 where a `Vec<T1>` is just a growable vector of elements of type `T1`. It's basically just a pointer, a length, and a capacity. Here we have a `Vec` of a pair, the `( , )` tuple notation, which is just an ad-hoc struct with two fields; it lets us pair up a time `T` with a `Vec<(V, i32)>`.
 
@@ -40,7 +40,7 @@ The downside of unique ownership is that sharing can be hard. If I have some dat
 
 ### Generalizing (Traits)
 
-That `HashMap` up above looks pretty sweet, but it isn't the best implementation by a long strech. We could optimize it lots, but instead lets think about writing a more general take on this collection of data.
+That `HashMap` up above looks pretty sweet, but it isn't the best implementation by a long stretch. We could optimize it lots, but instead lets think about writing a more general take on this collection of data.
 
 Rust provides the ability to define interfaces and types through *traits*. A trait lets you describe what features an implementation should have, without committing to the implementation just yet. Let's look at a quick example, the `Iterator` trait, which defines a type `Item` and a function `next`:
 
@@ -76,7 +76,7 @@ What have we done here? We've written a trait which names three types, `Key`, `T
 
 #### References
 
-References are types that provide access to an object, but do not own the object. A reference is written as `&T` and means "a reference to an existing (and elsewhere-owned) object `T`". If you write `&mut T` it corresponds to an exclusively held reference that you can even mutate; this means that no one else is currently working with it, not even the owner. 
+References are types that provide access to an object, but do not own the object. A reference is written as `&T` and means "a reference to an existing (and elsewhere-owned) object `T`". If you write `&mut T` it corresponds to an exclusively held reference that you can even mutate; this means that no one else is currently working with it, not even the owner.
 
 Rust statically guarantees that all references are to valid owned data, and in the case of mutable references that you are the exclusive reference holder. This makes using references very safe. However, it also means that you can't hold on to a reference forever. The data to which the reference refers is owned by someone else, and may become invalid if the owner mutates or discards the object.
 
@@ -92,7 +92,7 @@ To add a `lookup` method, we want to mimic the `remove` method but return a refe
 
 See how the return type has a `&` in front of it now? That means that what comes back is a reference.
 
-So what is the lifetime of this reference? For how long can we hold on to it? Can we go and add a few things to the map with `insert` and then come back to our reference? 
+So what is the lifetime of this reference? For how long can we hold on to it? Can we go and add a few things to the map with `insert` and then come back to our reference?
 
 No.
 
@@ -102,7 +102,7 @@ This is good! That reference is just a pointer in to memory, and if we went and 
 
 However, this also prevents calling `lookup` multiple times, which seems like it should be safe. Maybe we want to check that the lists are the same for two keys; should we be able to do that?
 
-The problem lies in the signature, which probably doesn't actually require a mutable borrow of `self`. We are probably only going to look at the object, rather than mutate it, and so we could change the signature to 
+The problem lies in the signature, which probably doesn't actually require a mutable borrow of `self`. We are probably only going to look at the object, rather than mutate it, and so we could change the signature to
 
 ```rust
     fn lookup(&self, key: K) -> &Vec<(T, Vec<(V, i32)>)>;
@@ -141,7 +141,7 @@ trait Trace {
 }
 ```
 
-It's a neat trait, but it isn't really all that general. It has a bunch of baked in assumptions about how the data are going to be stored. For example: should we really have to put all of our data in a `Vec` before calling `insert`, given that we might then just move it somewhere else? No! We can fix this by letting `insert` take an arbitary iterator over tuples `(K, T, V, i32)`:
+It's a neat trait, but it isn't really all that general. It has a bunch of baked in assumptions about how the data are going to be stored. For example: should we really have to put all of our data in a `Vec` before calling `insert`, given that we might then just move it somewhere else? No! We can fix this by letting `insert` take an arbitrary iterator over tuples `(K, T, V, i32)`:
 
 ```rust
 	// insert any iterator whose items are (Key, Time, Value, i32)
@@ -163,17 +163,17 @@ Here is another baked assumption: are we really going to use `Vec<(T, Vec<(V, i3
 	...
 ```
 
-Here we've gone and introduced two crazy new types: `VIterator` and `TIterator`. We've also imposed constraints on them: namely, `VIterator` should produce pairs `(V, i32)`, and `TIterator` should produce pairs of `T` and that `VIterator` type. 
+Here we've gone and introduced two crazy new types: `VIterator` and `TIterator`. We've also imposed constraints on them: namely, `VIterator` should produce pairs `(V, i32)`, and `TIterator` should produce pairs of `T` and that `VIterator` type.
 
 Why do this? It lets the implementor of `Trace` specify the type of iterator it will use when you call `remove`. If you happen to have a `Vec` full of the data, that is one iterator to use. If you've stored the data in some other way, you can specify a corresponding iterator. The user of the `Trace` trait doesn't need to know which iterators you will use when they write their program, only Rust needs to know when it compiles the program.
 
-Ok, one last method: `insert`. Take a deep breath, because it is a bit of a disaster. 
+Ok, one last method: `insert`. Take a deep breath, because it is a bit of a disaster.
 
 #### Higher Kinded Types
 
-Remember that `insert` takes a `&self` as an argument, and that we like it that way. Consequently, it can only return shared references to `self`. However, the `TIterator` and `VIterator` types return *owned* `T`s and `V`s, not references to them. That worked for `remove` because we were getting rid of those values anyhow, and handing back the owned data seemed fine. Not so any more. 
+Remember that `insert` takes a `&self` as an argument, and that we like it that way. Consequently, it can only return shared references to `self`. However, the `TIterator` and `VIterator` types return *owned* `T`s and `V`s, not references to them. That worked for `remove` because we were getting rid of those values anyhow, and handing back the owned data seemed fine. Not so any more.
 
-What we would like to write is 
+What we would like to write is
 
 ```rust
 	...
@@ -186,9 +186,9 @@ What we would like to write is
 	...
 ```
 
-This would be totally great. But there is a horrible bit of a mess of a dark secret. 
+This would be totally great. But there is a horrible bit of a mess of a dark secret.
 
-The string `Iterator<Item=(&V, i32)>` doesn't actually name a type. Rather, it is a family of types. `Iterator<Item=(&'a V, i32)>` is a well defined type for each `'a`, but each are different. 
+The string `Iterator<Item=(&V, i32)>` doesn't actually name a type. Rather, it is a family of types. `Iterator<Item=(&'a V, i32)>` is a well defined type for each `'a`, but each are different.
 
 Ideally we could write something like
 
@@ -244,7 +244,7 @@ I mean, let's pretend that we will do that. It's pretty easy, and roughly works.
 
 The arrangement branch of the differential repo has a vanilla implementation of `Trace` named `Basic`. It is roughly a pile of pairs `(T, Vec<(V,i32)>)` and for each key `K` a linked list of offsets into these (each key gets the range from its offset to the next keys offset). This has a pretty efficient `insert` implementation: all tuples for a time `T` happen to arrive at the same time, so we drop them in to a new vector, sort by `key`, push it on the list, and then tweak the heads of the linked lists for each involved key. The `lookup` implementation walks through the linked list for `key` and iterates over the contiguous slices of data.
 
-This works, and isn't bad in lots of cases, but it has a few defects. 
+This works, and isn't bad in lots of cases, but it has a few defects.
 
 1. Differential dataflow is meant to work with low latencies, which means lots and lots of distinct times. Having independent allocations for each time means lots of allocations. Lots of allocations means lots of random accesses when we need to sort through them.
 
