--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -10,15 +10,15 @@ The error in this thinking is that there is more than just the scientific commun
 
 So there is this "great article" [Fool's Gold: An Illustrated Critique of Differential Privacy](http://ssrn.com/abstract=2326746). You can go take a read if you like; it is about fifty pages, although you may be disappointed to learn that there are no actual illustrations.
 
-Instead the article, published in the Vanderbilt Journal of Entertainment and Technology Law, has a long procession of factually inaccurate statements, reflecting what appears to be the authors' fundamental lack of familiarity with probability and statistics. Or, more cynically, the article means to take advantage of a reader's lack of familiarity, because the authors work in a field where this background is absolutely mandatory. 
+Instead the article, published in the Vanderbilt Journal of Entertainment and Technology Law, has a long procession of factually inaccurate statements, reflecting what appears to be the authors' fundamental lack of familiarity with probability and statistics. Or, more cynically, the article means to take advantage of a reader's lack of familiarity, because the authors work in a field where this background is absolutely mandatory.
 
-We are going to go through the article's points, and you get to make the call on the timeless "ignorance vs malice" question. 
+We are going to go through the article's points, and you get to make the call on the timeless "ignorance vs malice" question.
 
 ### Differential privacy
 
 Differential privacy formalizes the idea that a "private" computation should not reveal whether any one person participated in the input or not, much less what their data are.
 
-Imagine the input to a randomized computation as a set of records. The formal version of differential privacy requires that the probability a computation produces any given output changes by at most a multiplicative factor when you add or remove one record from the input. The probability derives only from the randomness of the computation; all other quantities (input data, record to add or remove, given output) are taken to be the worst possible case. The largest multiplicative factor (actually, its natural logarithm) quantifies the amount of "privacy difference". 
+Imagine the input to a randomized computation as a set of records. The formal version of differential privacy requires that the probability a computation produces any given output changes by at most a multiplicative factor when you add or remove one record from the input. The probability derives only from the randomness of the computation; all other quantities (input data, record to add or remove, given output) are taken to be the worst possible case. The largest multiplicative factor (actually, its natural logarithm) quantifies the amount of "privacy difference".
 
 Here is the version I wrote in the PINQ paper, which I like, where the "plus circle" thing is symmetric difference: records in one set but not the other.
 
@@ -42,7 +42,7 @@ Now, maybe you grok the proof and maybe you don't. That's fine. But, it's a proo
 
 ### Prelude: An Introduction
 
-Several years ago, a paper [Differential Privacy for Numeric Data](http://www.unece.org/fileadmin/DAM/stats/documents/ece/ces/ge.46/2009/wp.9.e.pdf) made some exciting claims in its abstract. 
+Several years ago, a paper [Differential Privacy for Numeric Data](http://www.unece.org/fileadmin/DAM/stats/documents/ece/ces/ge.46/2009/wp.9.e.pdf) made some exciting claims in its abstract.
 
 > Abstract. The concept of differential privacy has received considerable attention in the literature recently. In this paper we evaluate the masking mechanism based on Laplace noise addition to satisfy differential privacy. The results of this study indicate that the Laplace based noise addition procedure does not satisfy the requirements of differential privacy.
 
@@ -50,7 +50,7 @@ Holy crap. If this is true, I'm probably out of a job.
 
 Now, of course it wasn't true. A cursory reading of the paper reveals that the authors have simply mis-copied a formula from the paper they read about differential privacy, and then dove deeply on that. I reached out to them:
 
-> From: Frank McSherry 
+> From: Frank McSherry
 > Sent: Wednesday, December 09, 2009 2:50 PM
 >
 > Dear Sirs,
@@ -71,7 +71,7 @@ But, fair cop, right? Sometime you miss something, and you own up to it.
 
 It turns out that owning up is for losers.
 
-> From: Muralidhar, Krishnamurty 
+> From: Muralidhar, Krishnamurty
 > Sent: Monday, January 04, 2010 8:08 AM
 >
 > Dear Mr. McSherry,
@@ -84,15 +84,15 @@ It turns out that owning up is for losers.
 >
 > Krish Muralidhar & Rathindra Sarathy
 
-Now, I am pretty smart, but I still couldn't resolve the apparent contradition of the proof I was familiar with, and these authors' claims. I was equally baffled by the statement: 
+Now, I am pretty smart, but I still couldn't resolve the apparent contradiction of the proof I was familiar with, and these authors' claims. I was equally baffled by the statement:
 
 > we never claim that differential privacy is not satisfied in any of these cases
 
 Because, like, their abstract says exactly that. If the other parts of their response aren't entirely clear to you, welcome to the club.
 
-Anyhow, I thought I'd try and be helpful. 
+Anyhow, I thought I'd try and be helpful.
 
-> From: Frank McSherry 
+> From: Frank McSherry
 > Sent: Wednesday, January 06, 2010 6:51 PM
 >
 > Dear Sirs,
@@ -121,23 +121,23 @@ Anyhow, I thought I'd try and be helpful.
 >
 > -Frank McSherry
 
-That's the proof we saw up above in that awesome screen shot. It's pretty short. It would be a great opportunity for the authors to point at the specific lines that they take issue with. 
+That's the proof we saw up above in that awesome screen shot. It's pretty short. It would be a great opportunity for the authors to point at the specific lines that they take issue with.
 
 Or they could wait a few weeks and then double-down on being wrong.
 
 > From: Muralidhar, Krishnamurty
 > Sent: Thursday, January 21, 2010 9:01 AM
-> 
+>
 > Dear Mr. McSherry,
-> 
+>
 > A careful study of your email responses thus far appear to reiterate and validate the primary conclusions of our paper that Laplace Noise Addition and differential privacy cannot be applied to numerical data in any meaningful way. Again, the thrust of our paper is NOT that differential privacy is not satisfied; it is that even when differential privacy is satisfied (making the issue of local versus global sensitivity moot), it does not prevent an intruder from gaining information about the very data points that it is intended to protect.
-> 
+>
 > As a case in point, you acknowledge that differential privacy can be applied only by "clamping the numerical data to a fixed range, perhaps via top-coding" clearly indicates to us that differential privacy fails to protect the very individuals it claims to protect, namely, those individuals whose confidential values are “influential” compared to the rest of the data set. This is precisely our point in the paper; Terry Gross's claim is substantially higher than the other individuals in the database and there is no way that a differential privacy based procedure can protect her data in a meaningful way.
-> 
+>
 > We urge you to give our paper a more detailed reading and would be happy to answer any questions you may have.
 >
 > Sincerely,
-> 
+>
 > Rathindra Sarathy & Krish Muralidhar
 
 Ok, this is where I start to get a bit tweaked. The authors have now made some factually inaccurate statements, and are either clueless or dishonest when they say things like
@@ -150,25 +150,25 @@ If you look at the text up above (the quote is from the first email), you see th
 
 A few more examples are given in the second email. Maybe a reading comprehension fail on their part? It would be a pretty epic fail, but it would also explain much of their other publications. Anyhow, let's finish this off:
 
-> From: Frank McSherry 
+> From: Frank McSherry
 > Date: Thu, Jan 21, 2010 at 8:33 PM
-> 
+>
 > Dear sirs,
-> 
+>
 > I think the problem we have is with a definition of terms. Differential privacy is a formal mathematical definition, and as far  as the scientific community understands, it aligns very well with the protection of individual data. What you have presented in your paper is an approach that *does not provide differential privacy*. I entirely agree that the approach you present fails to protect Terry Gross, or anyone else in (or not in) the data set. However, this is not a shortcoming of differential privacy (which is not satisfied), nor of any previously proposed approaches based on the addition of Laplacian noise (none of which appear in your note). It is a shortcoming of attempting to apply these techniques without using the prescribed sensitivity value (infinity, if you were hoping to simply add up unbounded values; less, if you apply more robust techniques).
-> 
+>
 > By way of analogy, I might write a paper about the failure of modern cryptography, because I always base my encryption on a secret key value of “1”. No cryptographer thinks this is a good idea, everything falls apart, none of the theorems continue to hold, and yet it is not evidence that any aspect of modern cryptography is lacking in anything other than more forceful instructions on how it should be properly applied.
-> 
+>
 > The main conclusion from your note is the observation that, if not applied as formally described in prior work, Laplace noise does not provide differential privacy, and may lead to the leakage of information. This is a somewhat more restrictive conclusion than your paper claims, however, in its abstract:
-> 
+>
 >  “The results of this study indicate that the Laplace based noise addition procedure does not satisfy the requirements of differential privacy”
-> 
+>
 > The reader is lead to believe that the definite article “the” modifying “Laplace based noise addition procedure” might refer to some Laplace based noise addition procedures that has been previously proposed (eg: based on global sensitivity, or smooth sensitivity), whereas it does not.
-> 
+>
 > If your intent was a cautionary tale about misapplying the Laplace based noise techniques, I agree and apologize for the somewhat strongly-worded response, but this is certainly not the interpretation it appears to have provoked from our correspondents.
-> 
+>
 > -Frank McSherry
-> 
+>
 > PS: Your statement that “Laplace Noise Addition and differential privacy cannot be applied to numerical data in any meaningful way” is demonstrably false. As evidence, I have thoughtfully attached the cumulative frequency function for the time between retransmitted packets in a network trace data set I was working with last night. The data are sourced in 100ns units, and the x-axis is in 1ms (= 10^6 ns) units. The values considered are as large as 640,000 in this figure, much larger than the insurance claims you were considering. Nonetheless, by using a [published] technique other than what you describe, I am indeed able to extract meaningful information from numerical data while providing differential privacy (0.2-differential privacy, in this case), through the addition of Laplace noise.
 
 ![Laplace proof](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/cdf.png)
@@ -191,15 +191,15 @@ I will present a third option: The authors could take a fucking stats class and 
 
 #### The introduction
 
-(the following section is some text I wrote previously, editted by Cynthia Dwork and Deirdre Mulligan, and then a bit more by me):
+(the following section is some text I wrote previously, edited by Cynthia Dwork and Deirdre Mulligan, and then a bit more by me):
 
-The article opens with an example of a young internist hoping to identify a possible epidemic early by asking her city for the number of reported cases of a rare disease year by year. Being only as expert on differential privacy as the authors of that paper, the internist takes the first differentially private mechanism that occurs to her, and is distraught to find her questions badly answered. 
+The article opens with an example of a young internist hoping to identify a possible epidemic early by asking her city for the number of reported cases of a rare disease year by year. Being only as expert on differential privacy as the authors of that paper, the internist takes the first differentially private mechanism that occurs to her, and is distraught to find her questions badly answered.
 
-While it is intended to be unsettling, the example shows differential privacy working *exactly as promised*: protecting unauthorized users from gaining overly specific information about small populations. The problems vanish if any of these three characteristics---unauthorized users, overly specific questions, and small populations---are removed. The problems of the internist lie in her expectations about how best to extract meaningful information from sensitive data, not in one of the tools she might choose to use. 
+While it is intended to be unsettling, the example shows differential privacy working *exactly as promised*: protecting unauthorized users from gaining overly specific information about small populations. The problems vanish if any of these three characteristics---unauthorized users, overly specific questions, and small populations---are removed. The problems of the internist lie in her expectations about how best to extract meaningful information from sensitive data, not in one of the tools she might choose to use.
 
 1. While the internist is clearly a sympathetic character, we know this only because the authors assure us. If the character of the internist is replaced by a pharmaceutical representative or a law-enforcement officer, the story takes a slightly different flavor. If the internist's interests were less noble, perhaps about sexually transmitted diseases among her Facebook friends, we stop being quite so upset at differential privacy. If the internist can explain to her subjects why her queries shouldn't be subjected to privacy controls, by all means let her bypass them; until she does, she gets no special treatment.
 
-2. The question posed by the internist (a count of the numbers of cases year by year) asks for more information than is needed to answer her question: are three cases abnormally high? The Laplace mechanism used in the example is the simplest of differentially private mechanisms, and the large volume of research in the area has led to many other ways of approaching data that produce more meaningful output, cost less in terms of privacy, and share the cost across multiple users. Any of these would have helped the internist get a more accurate answer. 
+2. The question posed by the internist (a count of the numbers of cases year by year) asks for more information than is needed to answer her question: are three cases abnormally high? The Laplace mechanism used in the example is the simplest of differentially private mechanisms, and the large volume of research in the area has led to many other ways of approaching data that produce more meaningful output, cost less in terms of privacy, and share the cost across multiple users. Any of these would have helped the internist get a more accurate answer.
 
 3. None of this would be an issue if the population in question was not small. The internist is frustrated because her questions are about a small subpopulation: those who may have a rare disease. This is a fundamental feature of differential privacy: it protects details about small populations. This makes it very useful in cases where the small population may be arbitrarily sensitive (e.g. vocal political dissidents). In the absence of consent from the subpopulation, differential privacy takes the conservative position that it is their right to remain approximately anonymous.
 
@@ -208,14 +208,14 @@ The parable of the young internist tells us more about the sophistication of the
 Differential privacy provides opportunities that wouldn't otherwise exist, but it doesn't solve all of the world's problems. This internist may need to get access to the raw data to do her job, which can be fine if other privacy controls are in place. Pretending that differential privacy should be used everywhere without question is obviously deranged: when doctors prescribe medication, should the result be differentially private? ("100ccs of raccoon, stat!") Obviously not.
 
 On the other hand, I am very much in favor of having restrictive privacy controls like differential privacy be the default, especially for internists trained in privacy by the authors.
- 
+
 #### Part II: Stunning failures in application
 
-This section of the article gives four examples of where differential privacy totally fails. 
+This section of the article gives four examples of where differential privacy totally fails.
 
-> Part II explores the many contexts in which differential privacy *cannot* provide meaningful protection for privacy without sabotaging the utility of the data. 
+> Part II explores the many contexts in which differential privacy *cannot* provide meaningful protection for privacy without sabotaging the utility of the data.
 
-it continues with 
+it continues with
 
 > ... suggesting, at least in some cases, that the proponents of differential privacy do not themselves fully understand the theory.
 
@@ -225,9 +225,9 @@ I think *someone* doesn't understand differential privacy. Let's find out who.
 
 This section relates an oft-invoked example privacy concern that goes roughly as follows: Imagine we know that someone's height is two inches shorter than that of the average Lithuanian woman; would revealing that statistic violate the someone's privacy?
 
-The example was original constructed as part of a *reductio ad absurdum* argument: this "privacy concern" exists even if the someone isn't a Lithuanian woman (and so presumably isn't even in the dataset). This particular type of side information vexxed a great deal of folks who wanted to provide absolute privacy guarantees: the results of a query should reveal nothing specific that could not be known without the results of the query. This example is meant to be an "oh shit" moment for absolute privacy.
+The example was originally constructed as part of a *reductio ad absurdum* argument: this "privacy concern" exists even if the someone isn't a Lithuanian woman (and so presumably isn't even in the dataset). This particular type of side information vexxed a great deal of folks who wanted to provide absolute privacy guarantees: the results of a query should reveal nothing specific that could not be known without the results of the query. This example is meant to be an "oh shit" moment for absolute privacy.
 
-Differential privacy specifically changes its goals, protecting fewer but more specific secrets. The "differential" part of the definition explains the secrets it protects: the information you contribute to or withold from the input. If information about you could be learned without your participation in the computation's input, then the computation is not to blame for mis-managing your private information. So we think, anyhow. 
+Differential privacy specifically changes its goals, protecting fewer but more specific secrets. The "differential" part of the definition explains the secrets it protects: the information you contribute to or withold from the input. If information about you could be learned without your participation in the computation's input, then the computation is not to blame for mis-managing your private information. So we think, anyhow.
 
 Differential privacy is a way to clearly delineate between secrets that are yours to keep, and information that could be revealed by others. Without this line, you get only negative results about absolute privacy.
 
@@ -285,18 +285,18 @@ So, check with the statisticians working with your data. Ask them if they've hea
 
 #### Part IId: Correlations
 
-The problems of this next section actually start with the last paragraph in the previous section. There the authors observe that like count queries, other queries that are changed by at most 1 can be protected by the Laplace mechanism, and produce horrible results. They give the example of determining the average rate of income tax (presumably from 0.0 to 1.0; I'm not a tax lawyer), and observe that if you 
+The problems of this next section actually start with the last paragraph in the previous section. There the authors observe that like count queries, other queries that are changed by at most 1 can be protected by the Laplace mechanism, and produce horrible results. They give the example of determining the average rate of income tax (presumably from 0.0 to 1.0; I'm not a tax lawyer), and observe that if you
 
 1. compute the average tax rate, and then
 2. apply enough Laplace noise to mask a contribution of 1,
 
-you get abyssmal results. It's true.
+you get abysmal results. It's true.
 
-The subject of this section is correlations, measurements of depedence between variables, ranging from -1 to 1. A value of 1 indicates that the two variables are perfectly correlated, and a value of -1 indicates that they are perfectly anti-correlated. The authors work through the only technique they know: compute the correlation and then add enough noise to mask a contribution of 1. It does very badly indeed. What should we learn from this?
+The subject of this section is correlations, measurements of dependence between variables, ranging from -1 to 1. A value of 1 indicates that the two variables are perfectly correlated, and a value of -1 indicates that they are perfectly anti-correlated. The authors work through the only technique they know: compute the correlation and then add enough noise to mask a contribution of 1. It does very badly indeed. What should we learn from this?
 
 This is a horrible way to compute such an average. You went and added the noise you would add to large sums over many people to a single [-1.0, 1.0] number. What did you think would happen?
 
-Fortunately, there are smarter ways to compute averages, other than first taking the average and then applying noise. And, of course, the authors know this. Earlier in their article, determining Lithuanian heights in Section IIa, the authors reveal that they *do* understand how to compute averages: sum the numerator and add noise, sum the denominator and add noise, then divide one by the other. 
+Fortunately, there are smarter ways to compute averages, other than first taking the average and then applying noise. And, of course, the authors know this. Earlier in their article, determining Lithuanian heights in Section IIa, the authors reveal that they *do* understand how to compute averages: sum the numerator and add noise, sum the denominator and add noise, then divide one by the other.
 
 Do not first sum and divide, and then add noise. This entire section is predicated on the idea that you do this badly.
 
@@ -308,22 +308,22 @@ This is true; "noise like that" sucks. But you are only using "noise like that" 
 
 #### Part II: Summary
 
-There are four complaints in this section; let's review them: 
+There are four complaints in this section; let's review them:
 
 1. Differential privacy provides inaccurate answers for small populations.
-   
+
    Check. That is its goal, and we do a great job. Thank you for noticing!
 
 2. Laplace noise addition adds way too much noise to statistics that can fluctuate wildly with few users.
-   
+
    Also true. But for exactly those fluctuation reasons, statisticians use better statistical estimators. You should consider using them. Differential privacy seems rather compatible with the improved estimators. You are welcome!
 
 3. People may think that noised counts are true counts, rather than noised counts.
-   
+
    I suppose. The way to get around this is education. We've written several papers connecting probabilistic inference with differential privacy. You could read them and then help inform people, rather than cynically tell readers that there is no choice but to do things badly.
 
 4. Computing correlations and such, just by naively using the Laplace mechanism, works poorly.
-   
+
    Yes, this is why we didn't stop doing research once we wrote about the Laplace mechanism, even though that very paper contains the mechanisms you should have used for correlation. It turns out that there are lots of other options, which can be much better. If you look into them for just a few brief moments, or read your emails from a few years ago, you will discover some. Other options include: asking an expert, rather than pretending to be an expert.
 
 The authors seem to be some mix of willfully ignorant, technically deficient, and intentionally misleading. I can't really tell what mix.
@@ -346,7 +346,7 @@ The conclusions mostly alternate florid prose with a few non-crucial misundersta
 >
 > ...
 >
-> In its pure form, differential privacy has no chance of broad application. 
+> In its pure form, differential privacy has no chance of broad application.
 >
 > ...
 >
@@ -362,6 +362,6 @@ Here is the article's last line:
 
 > Lest we ... *blah blah* ... the legal and policy community must curb its enthusiasm for this trendy theory.
 
-You could curb your enthusiasm. Or you could educate yourself. The authors of this paper, and in particular their levels of education, are a travesty. 
+You could curb your enthusiasm. Or you could educate yourself. The authors of this paper, and in particular their levels of education, are a travesty.
 
 Perhaps, independent of your ultimate take on differential privacy, the legal and policy community could curb its enthusiasm for incompetent and/or intentionally dishonest research articles. Vanderbilt Journal of Entertainment and Technology Law, I'm looking at you.
