--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -10,7 +10,7 @@ There are a large number of definitions of privacy out there. Try and write down
 
 Differential privacy is yet another privacy definition. It is certainly both philosophical and technical, but more importantly it is *actionable*: it directly attacks the specific concern data subjects have: what will be the consequences of participation in this data set?
 
-Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data. 
+Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data.
 
 In fact it makes a stronger quantitative guarantee: The chance that *any specific thing* happens (really, anything at all) with access to your data is at most a multiple X of the chance it would happen without your data. That "multiple" X is part of the guarantee and it determines how much privacy you get: a value of 1.0 would be perfect privacy (which by definition ignores your data), small values like 1.01 are pretty great, whereas values like 10.0 are less amazing but still non-trivial.
 
@@ -18,7 +18,7 @@ What sorts of things does differential privacy ensure don't happen now that coul
 
 * Are you worried that by participating you might get more junk mail and phone calls? The expected number will increase by no more than a factor of X.
 
-* Are you worried that your embarassing on-line searches might show up on the front page of the New York Times? It is only X times more likely than if you hadn't even made them (probably pretty unlikely in that case, right?)
+* Are you worried that your embarrassing on-line searches might show up on the front page of the New York Times? It is only X times more likely than if you hadn't even made them (probably pretty unlikely in that case, right?)
 
 * Are you worried that by participating in a phone survey, your favorite team will lose the Superbowl? You just can't shift the odds that much, sorry.
 
@@ -30,11 +30,11 @@ Almost all of the existing privacy definitions frame some sort of "privacy viola
 
 Rather, here is a problem that almost no privacy definitions guard against: you are a brown person living in rural America, and perhaps you happen to follow a conservative interpretation of Islam. You get a totally anonymous form to fill out, indicating yes or no about Islamism. There is no way to link back to who you are, no personally identifying information, nothing. How do you fill out the form?
 
-If the results are published, just the totals with no identifying information, and the number of Islamists in your small town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they didn't consult with the newest research on re-identification. They just saw some number they didn't like and figured they should do something about it. 
+If the results are published, just the totals with no identifying information, and the number of Islamists in your small town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they didn't consult with the newest research on re-identification. They just saw some number they didn't like and figured they should do something about it.
 
 So, privacy accomplished? Which privacy philosopher do you have to thank for your new busted-ass condition?
 
-Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business. 
+Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business.
 
 Differential privacy can't promise you that you will have a long, happy, and uneventful life, but it can promise that participating in differentially private computations will not be the reason shitty things happen to you.
 
@@ -66,7 +66,7 @@ Imagine we want to count the number of records in our input dataset. That seems 
 
 A simple remedy is to add some random error to the reported count. To satisfy differential privacy, we need to add random error with the property that if I add or remove a record, changing the true answer by at most one, I don't cause any output to become more or less likely than by a factor of `exp(epsilon)`. Some answers *can* become more likely, just not by too much.
 
-The probability that we see any specific output `val` from our count is the probability that the error happens to be `val - count`. This probability could be a few things, but we need to make sure that it isn't too far from the probability for `val - (count + 1)`, because that is the probability we see `val` after we add a record to the dataset. Likewise, it can't be too far from `val - (count - 1)`. 
+The probability that we see any specific output `val` from our count is the probability that the error happens to be `val - count`. This probability could be a few things, but we need to make sure that it isn't too far from the probability for `val - (count + 1)`, because that is the probability we see `val` after we add a record to the dataset. Likewise, it can't be too far from `val - (count - 1)`.
 
 	Pr[error = val] < Pr[error = val + 1] * exp(epsilon)
 	Pr[error = val] > Pr[error = val - 1] / exp(epsilon)
@@ -91,7 +91,7 @@ So let's look at the cumulative density functions for those A and B people. We'l
 
 As expected, we see a sharp increase at around 400, which is good because we really don't expect to see values too far away from that value.
 
-Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 400? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard. 
+Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 400? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard.
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf2.png)
 
@@ -109,9 +109,9 @@ Counting seems pretty trivial. In fact, lots of statistics basically boils down 
 
 What you do often see in statistics are accumulations (sums, often) where the contributions from each individual sample is bounded. This makes some sense: if one respondent could blow the statistic out of the water, any number of reasons could cause the result to be tainted: surprising out-liers, data corruption, mischief generally.
 
-Fortunately, the Laplace noise addition above applies to any summation where each datum contributes at most one to the sum. A count has that property, right? It turns out that this relaxed property is good enough (actually, we can relax it even more). Let's think about some summations where each datum contributes at most one to the sum. 
+Fortunately, the Laplace noise addition above applies to any summation where each datum contributes at most one to the sum. A count has that property, right? It turns out that this relaxed property is good enough (actually, we can relax it even more). Let's think about some summations where each datum contributes at most one to the sum.
 
-Important: for these experiments, all of our data are going to use numbers between -1 and 1. It is important that they lie in this range, because if not we must either: i. clamp them to the range, or ii. give worse privacy guarantees for large entries. Now, you might say "that's a bit of a cheat!" but if your numbers lie between -b and b, mentally divide them by b. If you can't think of such a number b, wait for a section or two (when we do `median`). 
+Important: for these experiments, all of our data are going to use numbers between -1 and 1. It is important that they lie in this range, because if not we must either: i. clamp them to the range, or ii. give worse privacy guarantees for large entries. Now, you might say "that's a bit of a cheat!" but if your numbers lie between -b and b, mentally divide them by b. If you can't think of such a number b, wait for a section or two (when we do `median`).
 
 So, things we could sum up:
 
@@ -131,7 +131,7 @@ We have already seen how the inherent randomness in counts relates to the random
 
 This raises an important point about differential privacy: as you ask more questions, the privacy guarantee degrades. If you ask two `epsilon`-differentially private queries, the two together only guarantee `2 * epsilon`-differential privacy. It's annoying that privacy degrades, but it makes some sense. What is appealing (to me at least) is that it degrades in a controlled fashion, as opposed to suddenly collapsing entirely.
 
-**Sequential composition**: If you perform two (or more) differentially private computations, they collectively provide differential privacy with parameter bounded by the sum of the parameters you used. 
+**Sequential composition**: If you perform two (or more) differentially private computations, they collectively provide differential privacy with parameter bounded by the sum of the parameters you used.
 
 To do our experiment we will want to compute the count, the mean, and the second moment each with privacy parameter `epsilon/3`, which triples the amount of noise we will introduce. Oh no! Well, let's see how it looks, anyhow. Here are 1,000 samples of the standard deviation, where I have subtracted off the mean value to center the error at zero, and 1,000 of 0.1-differentially private measurements of the standard deviation, also with the true value subtracted off.
 
@@ -156,7 +156,7 @@ Let's look at some code! Everyone likes code. It reveals all the dark, horrible 
 First, let's write something to generate Laplace noise.
 
 ```rust
-// generates a sample from the Laplace distribution by taking 
+// generates a sample from the Laplace distribution by taking
 // the ln of a (0, 1] random number, then choosing a random sign.
 fn laplace(scale: f64) -> f64 {
 	let mut rng = rand::thread_rng();
@@ -170,19 +170,19 @@ Now let's write a helper routine to make taking noisy sums easy!
 
 ```rust
 trait NoisySum {
-	fn noisy_sum(self, epsilon: f64) -> f64;	
+	fn noisy_sum(self, epsilon: f64) -> f64;
 }
 
 impl<I: Iterator<Item=f64>> NoisySum for I {
-	// computes a sum with epsilon-differential privacy, 
+	// computes a sum with epsilon-differential privacy,
 	// thresholding elements as appropriate.
 	fn noisy_sum(self, epsilon: f64) -> f64 {
 		let sum = self.map(|x| if x < -1.0 { -1.0 } else { x })
 					  .map(|x| if x >  1.0 {  1.0 } else { x })
 					  .sum::<f64>();
 
-	  	sum + laplace(1.0/epsilon)	
-	}	
+	  	sum + laplace(1.0/epsilon)
+	}
 }
 ```
 
@@ -191,12 +191,12 @@ This method takes an iterator over `f64` values, presumed and enforced to be bet
 What might we do with such a delightful subroutine? Well, how about the Pearson correlation coefficient up above?
 
 ```rust
-// The Pearson product-moment correlation coefficient of two distributions X and Y 
-// can be computed as: 
-// 
+// The Pearson product-moment correlation coefficient of two distributions X and Y
+// can be computed as:
+//
 //   (E[XY] - E[X]E[Y]) / (E[X^2] - E[X]^2)^{1/2} (E[Y^2] - E[Y]^2)^{1/2}
 //
-// which we do here with epsilon-differential privacy. 
+// which we do here with epsilon-differential privacy.
 fn ppmcc(data: &[(f64, f64)], epsilon: f64) -> f64 {
 
 	// count the number of records, for the denominator of our expectations.
@@ -220,7 +220,7 @@ fn ppmcc(data: &[(f64, f64)], epsilon: f64) -> f64 {
 
 That was so easy! Except for the parts about statistics, which whatever, right?
 
-Let's take a peek! Let's take our population of A and B people, and indicate A people by a value of -1 and B people by a value of 1. Now let's randomly give each person some predispositions for chocolate, indepedent of their type. We should see no correlation. 
+Let's take a peek! Let's take our population of A and B people, and indicate A people by a value of -1 and B people by a value of 1. Now let's randomly give each person some predispositions for chocolate, independent of their type. We should see no correlation.
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf5.png)
 
@@ -266,7 +266,7 @@ What we can do, however, is stitch together the three measurements we have taken
 
 * We have great measurements to tell us how many records are less than 0.0: we add together the [-2.0, -1.0) measurement with the [-1.0, 0.0) measurement.
 
-* To count the number of records less than, say, 0.5, we can add in the appropriate five 0.1-sized intervals. 
+* To count the number of records less than, say, 0.5, we can add in the appropriate five 0.1-sized intervals.
 
 * To count the number of records less than, say, 0.53, we can add in the appropriate three 0.01-sized intervals.
 
@@ -282,7 +282,7 @@ The exponential mechanism is actually pretty easy to describe. Analyzing its beh
 
 To whip up an instance of the exponential mechanism, you need to define two things:
 
-1.  You must identify a possible set of output values. 
+1.  You must identify a possible set of output values.
 
     In this case, lets use "32 bit integers" to represent the range from -1 to 1 (so we are mentally dividing our numbers by 2^31).
 
@@ -342,16 +342,16 @@ There is a neat generalization of what we did above to a larger class of statist
 
 1.  The set of possible output values as the possible values of the statistic (whatever range it takes).
 
-2.  The score function as 
+2.  The score function as
 
         score(data, val) = -"how few records in data must change to make stat(data) = val?"
 
-This score function penalizes output values that would require large changes to the data to cause the value to come into effect. In the case of median, we need to change large amounts of data to get a far away median. Other stastics are less robust, but you still get useful computations. 
+This score function penalizes output values that would require large changes to the data to cause the value to come into effect. In the case of median, we need to change large amounts of data to get a far away median. Other statistics are less robust, but you still get useful computations.
 
 For example, you can do "average of -1 to 1 values", like we did up above with Laplace noise, but here get much tighter concentration around the limits: if the average value is currently -0.99 due to all points themselves being -0.99, then you may have to change a very large number of points to get the average to -0.999; at least 10% of them. To get the value to -1.0 you'd have to change all the points, which ends up with even more penalty. Despite -0.999 and -1.0 being somewhat close to -0.99, they end up with exponentially small probabilities in the size of the dataset (in this case).
 
 It is possible, though I don't know the answer, that you could apply this to the problem of the Pearson correlation coefficient that we studied above. It has a valid range of -1.0 to 1.0, and if you impose a bound on the magnitude of the records, you should also get concentrated results that are especially concentrated at the limits of its valid range. Plus you bypass the factor of six we ate indirectly computing all those moments.
 
-The hard part for general statistics, unlike median and average, is determining how few records you need to change to reach a given value of the output. Is it piecewise linear and monotonically increasing as you move away from the true value? Can the break-points be easily determined? I don't know the answers to these, even for the correlation coefficient, but they seem like good questions to ponder! 
+The hard part for general statistics, unlike median and average, is determining how few records you need to change to reach a given value of the output. Is it piecewise linear and monotonically increasing as you move away from the true value? Can the break-points be easily determined? I don't know the answers to these, even for the correlation coefficient, but they seem like good questions to ponder!
 
 Research, ho!
