--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -23,11 +23,11 @@ Consider the following two ways of looking at your data: with all the data, and 
 
 ![example](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/example.png)
 
-Explanations look like they might be pretty handy for reachability, right? 
+Explanations look like they might be pretty handy for reachability, right?
 
 I mean, we would still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
 
-By the end of the post we'll see how to do the above agaist constantly updating billion edge graphs with millisecond latencies, without writing any new system (or even much/any new code, in principle).
+By the end of the post we'll see how to do the above against constantly updating billion edge graphs with millisecond latencies, without writing any new system (or even much/any new code, in principle).
 
 ### Explaining all the things
 
@@ -41,15 +41,15 @@ Before going too far, let's specify the problem we would like to solve. Imagine 
 
 We know there is at least one solution to this problem: the entire input collection itself reproduces the entire output collection. However, we are interested in more concise explanations, and will work towards minimizing the amount of input we actually need. This is one place where differential dataflow helps out a great deal: naïve adaptations of existing work can result in enormous explanations. Even differential dataflow can provide large explanations, and we will need to introduce some "optimizations" to streamline the explanations. For example, we may just want *one* path between two nodes, rather than all paths, or ever "all shortest paths".
 
-We promised interactive updates to explanations for interactively update computations, so let's clear that up now. 
+We promised interactive updates to explanations for interactively update computations, so let's clear that up now.
 
 Recall that differential dataflow updates computations. We will produce explanations in the spirit above, using differential dataflow. As such, that computation (the explanation computation) will interactively update as well. At each moment in time, we will have computed an explanation for the current snapshot of the data, where the stream of updates to the explanations move us from one correct answer (explanation) to the next, tracking the changes to the input.
 
 ## Differential dataflow
 
-Let's do a quick recap of what differential dataflow is, because this will play an important role in understanding how it plays a role in explaning things. We could just start with the idea that it is good at doing big-data like computations, and that it quickly updates computations. This is a great start, but we'll want to dig a bit deeper to really grok what is going on.
+Let's do a quick recap of what differential dataflow is, because this will play an important role in understanding how it plays a role in explaining things. We could just start with the idea that it is good at doing big-data like computations, and that it quickly updates computations. This is a great start, but we'll want to dig a bit deeper to really grok what is going on.
 
-Differential dataflow computations can be viewed as directed dataflow computations: each vertex in the dataflow graph names a collection, and directed edges from one vertex to another indicate that the source is used in the definition of the target. 
+Differential dataflow computations can be viewed as directed dataflow computations: each vertex in the dataflow graph names a collection, and directed edges from one vertex to another indicate that the source is used in the definition of the target.
 
 For example, here is a picture (it is for breadth-first search, but the graph structure is basically the same for label propagation):
 
@@ -67,7 +67,7 @@ This isn't very helpful yet, because we have identified entire collections as us
 
 Fortunately, most big data computations (and differential dataflow specifically) use *data-parallel* operators: each collection is not an arbitrary function of its inputs, but rather the result of partitioning the elements of its input collections, and applying a function to each part. For example, when we determine the minimum label a graph node receives, we partition the proposed labels by "proposee"; at this point, each part yields only the smallest label, independent of what the other parts do.
 
-This independence is part of what makes differential dataflow go fast: we know that changes only affect one part, and can minimize the amount of recomputation we do when a change arrives. For exactly the same reason, indepedence helps us provide concise explanations: we know that only so many records played a role in determining some output.
+This independence is part of what makes differential dataflow go fast: we know that changes only affect one part, and can minimize the amount of recomputation we do when a change arrives. For exactly the same reason, independence helps us provide concise explanations: we know that only so many records played a role in determining some output.
 
 > A collection element is explained by the input collection elements in the part that would produce it.
 
@@ -77,9 +77,9 @@ This is now a bit more helpful. If we need to explain some records in the output
 
 While each operator can name input records required to explain output records, the dataflow graph shows us how to find explanations for these input records: they were output records of some other vertex in the dataflow graph, or perhaps they are inputs to the computation itself. In either case, we can chase backwards through the dataflow graph, expanding the set of tuples of which we require explanations, until we have some subset of the input records and no additional internal records to explain.
 
-Looking back at the picture up above; if we had to explain the outputs of `group`, we would push them back to `concat`, which would probably require explanations from `map`, etc. 
+Looking back at the picture up above; if we had to explain the outputs of `group`, we would push them back to `concat`, which would probably require explanations from `map`, etc.
 
-There is the sneaky issue that differential dataflow allows loops, which means we might have to chase these dependencies for a while. This is true, but we'll use differential dataflow's timestamps (in the next section) to make sure that we only chase *causal* dependencies: records that could actually play a role in the production of outputs. 
+There is the sneaky issue that differential dataflow allows loops, which means we might have to chase these dependencies for a while. This is true, but we'll use differential dataflow's timestamps (in the next section) to make sure that we only chase *causal* dependencies: records that could actually play a role in the production of outputs.
 
 ### Logical timestamps
 
@@ -94,7 +94,7 @@ where the shape of these tuples is `(record, change, time)`: the record has some
 
 Each differential dataflow operator maps whatever collection logic it has across all of the times at which its inputs change. For the example above, it could produce output changes at times `0` and `7`. Importantly, the computation for time `0` ignores the input changes for time `7` (or other times greater than `0`); consequently, they will not play a role in explaining such outputs.
 
-The important feature here is the timestamp: when we explain records in a differential dataflow computation, we will ask for explanations *at a specific timestamp*. For example, if we want to know about `r1`, we need to clearly indicate whether we want it explained at time `0`, when the record still exists, or at time `7`, when it no longer exists. In the first case, we can ignore the `(r1, -1, 7)` tuple; it doesn't explain the output, and we don't need to have it explained. In the second case, we totally need that subtraction, because without it we wouldn't produce the right answer (and you wouldn't be impressed with the explanation). 
+The important feature here is the timestamp: when we explain records in a differential dataflow computation, we will ask for explanations *at a specific timestamp*. For example, if we want to know about `r1`, we need to clearly indicate whether we want it explained at time `0`, when the record still exists, or at time `7`, when it no longer exists. In the first case, we can ignore the `(r1, -1, 7)` tuple; it doesn't explain the output, and we don't need to have it explained. In the second case, we totally need that subtraction, because without it we wouldn't produce the right answer (and you wouldn't be impressed with the explanation).
 
 Timestamps also allow us to break "explanation loops" that might otherwise exist in chasing records around a cyclic dataflow graph: here we guarantee that the explanatory timestamps only decrease as we chase them through the dataflow graph.
 
@@ -102,7 +102,7 @@ Timestamps also allow us to break "explanation loops" that might otherwise exist
 
 We are going to start with a very simple approach: for each differential dataflow operator, we'll make a second, new operator with the same behavior, but additional inputs and outputs. For each output of the original operator, we'll add a new "explain me" input: this input sees a collection of operator outputs that should be explained. For each input of the original operator, we'll add a new "explanation" output: this output produces the subset of the corresponding input needed to explain the requested outputs. Because the figures work this way, we'll add the suffix `_q` to these new "query" collections.
 
-We'll then wire up our new operators in a reflection of the original dataflow graph: wherever there is an edge from `op1` to `op2`, we will add an edge in the reverse direction, from `op2_q` back to `op1_q`. This will turn explanation requests made of `op2` into explanation requests for `op1`, which in turn can pass requests back to its input operators. 
+We'll then wire up our new operators in a reflection of the original dataflow graph: wherever there is an edge from `op1` to `op2`, we will add an edge in the reverse direction, from `op2_q` back to `op1_q`. This will turn explanation requests made of `op2` into explanation requests for `op1`, which in turn can pass requests back to its input operators.
 
 Here is a schematic picture, which isn't particularly accurate. :)
 
@@ -116,13 +116,13 @@ We will start with simple, general versions of operator explanations, which shou
 
 The simplest sort of operator in differential dataflow is the `group` operator, which allows you to specify a key for each input record, and some logic to apply to each group of records (grouped by that key). The output collection is the collation of all of the outputs produced by the groups.
 
-We are going to make our lives a little easier here, and require that the outputs from `group` have the form `(key, val)`; that is, they explicitly record the key used to produce the record. We could work around this by keeping a bit more information on the side, but we'll see that most of use cases do this, and it is basically free to "discard" the key if we actually want to. 
+We are going to make our lives a little easier here, and require that the outputs from `group` have the form `(key, val)`; that is, they explicitly record the key used to produce the record. We could work around this by keeping a bit more information on the side, but we'll see that most of use cases do this, and it is basically free to "discard" the key if we actually want to.
 
 Let's try to implement `group_q`: we have records input to `group` that look like `(key, val)` and output records that look like `(key, val)`. For any requested output records (inputs to `group_q`) we want to find the `group` input records with the same key (because those are exactly the inputs that produced the output). It kind of looks like we want a `join` between the actual input and the requested output. Let's do that.
 
 ![group](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/group.png)
 
-The `group` operator on top is what we see on the left side of the picture above. The `join` below it just gets called `group_q`, because it's all we need to fish out the relevant inputs for any given outputs. 
+The `group` operator on top is what we see on the left side of the picture above. The `join` below it just gets called `group_q`, because it's all we need to fish out the relevant inputs for any given outputs.
 
 This is a simple way to determine the inputs; what are the overheads involved? A `join` in differential dataflow is roughly like a hash-join: each input is kept indexed by its key, and when records (changes to records) arrive on either input they are matched against existing records on the other input. In our case, the input collection will be maintained indexed by key, and as new requests arrive they result in one look-up, and the emission of input records with the same key.
 
@@ -142,7 +142,7 @@ These are going to be some smarter approaches, but also some admissions that wha
 
 #### The `map` operator
 
-Explanations for `map` can be simplified dramatically when the map logic is *invertible*. That is, if we can go automatically from the output to the input, then we don't need to write anything down. You might think this is a rare case, but in our examples at least we use `map` mostly to re-arrange a record to exchange which parts are key and which parts are value. 
+Explanations for `map` can be simplified dramatically when the map logic is *invertible*. That is, if we can go automatically from the output to the input, then we don't need to write anything down. You might think this is a rare case, but in our examples at least we use `map` mostly to re-arrange a record to exchange which parts are key and which parts are value.
 
 In case it isn't clear, we have a picture indicating the smarter dataflow:
 
@@ -160,7 +160,7 @@ No additional state needs to be retained for `join` operators. At runtime, each 
 
 The `group` operator is a general-purpose aggregator, but often we know there is more specific logic to be applied. One example we saw several times in our programs is the `topk` operator, which partitions its input by some key and for each key retains the top few values in the part.
 
-For example, label propagation repeatedly circulates label proposals, with each participant retaining only the smallest label. We would usually write this with a `group` operator, because we want to bring together all the proposals destined for one participant. We know that we only plan to keep the smallest label, but as long as this remains our secret any general-purpose explanation infrastructure will only know to ask for explanations of all of a parts input. 
+For example, label propagation repeatedly circulates label proposals, with each participant retaining only the smallest label. We would usually write this with a `group` operator, because we want to bring together all the proposals destined for one participant. We know that we only plan to keep the smallest label, but as long as this remains our secret any general-purpose explanation infrastructure will only know to ask for explanations of all of a parts input.
 
 Instead, if we make clear that we are using a special form of `group`, we should be able to ask for the smallest record (or records) as the explanation. These records explains what actually happens, as all other records are simply discarded. To make this work correctly, we need to join any requests `(key, val)` with the actual top few records, produced as output. This join is important because the actual answer may differ from our request; recall that we want to explain absences as well as actual records (why was that again? keep reading!).
 
@@ -170,7 +170,7 @@ The overhead of `topk` is like that of `group`, except that we index the output 
 
 ### Recap
 
-When we write a differential dataflow program, we also assemble a shadow copy of the dataflow graph, one that draws in various collections produced by the real computation, as well as requests for explanations of its output records. This shadow dataflow graph circulates explanation requests until all have resolved requests made of the input collections themselves. These inputs are then the explanations for the outputs. 
+When we write a differential dataflow program, we also assemble a shadow copy of the dataflow graph, one that draws in various collections produced by the real computation, as well as requests for explanations of its output records. This shadow dataflow graph circulates explanation requests until all have resolved requests made of the input collections themselves. These inputs are then the explanations for the outputs.
 
 Both of these dataflow graphs are running at the same time, both continually updating in response to changes in the inputs (data, and requested explanations).
 
@@ -194,11 +194,11 @@ The Spark-style computational model doesn't reveal the relation between successi
 
 #### Datalog-style provenance
 
-Another approach is to invoke [provenance work done in the datalog community](https://yanniss.github.io/DeclarativeDebugging.pdf). If you aren't familiar with datalog, think of it as a version of SQL with recursion and a less shouty syntax. The language inherently supports recursion and joins, which is great for label propagation, but it doesn't natively support aggregations like `min` or `topk`. Also, for good reasons, the explanations produced in these systems include *all* explanations, corresponding to all paths from `label` to `frank` in our example from way above. 
+Another approach is to invoke [provenance work done in the datalog community](https://yanniss.github.io/DeclarativeDebugging.pdf). If you aren't familiar with datalog, think of it as a version of SQL with recursion and a less shouty syntax. The language inherently supports recursion and joins, which is great for label propagation, but it doesn't natively support aggregations like `min` or `topk`. Also, for good reasons, the explanations produced in these systems include *all* explanations, corresponding to all paths from `label` to `frank` in our example from way above.
 
 This isn't as bad as the Spark-style "literally every path anywhere" explanations, but in a connected graph you are still going to get all the edges in your connected component. You'll produce fewer intermediate requests though, so yay.
 
-Both of these approach end up asking for pretty much all the edges in the graph. This isn't helpful. We aren't going to evaluate these. 
+Both of these approach end up asking for pretty much all the edges in the graph. This isn't helpful. We aren't going to evaluate these.
 
 ### Simple differential approach
 
@@ -218,7 +218,7 @@ The explanation lies in the next figure, in which we plot the time taken against
 
 This is just a scatterplot, but it shows us that there is a pretty serious correlation between the amount of time taken and the size of the explanation. And, wtf why are the explanations so big so often? Some are nearly one million edges. That sounds wrong, right?
 
-The problem here is that `group` is just pulling in all contributions to each computation. This isn't as bad as it sounds, in that if you get label `0` in round 5, `group` is smart enough to only ask for inputs in round `4`, and then round `3` etc. Because the differential dataflow label propagation is smart (it propagates small labels first), this actually means that we are producing edges corresponding to shortest paths from, e.g. `label` to `frank`. 
+The problem here is that `group` is just pulling in all contributions to each computation. This isn't as bad as it sounds, in that if you get label `0` in round 5, `group` is smart enough to only ask for inputs in round `4`, and then round `3` etc. Because the differential dataflow label propagation is smart (it propagates small labels first), this actually means that we are producing edges corresponding to shortest paths from, e.g. `label` to `frank`.
 
 The problem is that there can be lots of these shortest paths. Many nodes have large numbers (hundreds of thousands) of paths of the same short length back to the node that produced their label. The `group` operator keeps all of them, because ... well, you didn't realize this would be a problem either, did you?
 
@@ -226,7 +226,7 @@ So at least part of the problem is that we are producing too much output. Not ju
 
 ### Smarter differential approach
 
-Let's swing in the `topk` operator, which is smarter than `group` and only requires one element (label proposal, in this case) as an explanation. As everyone is actually proposing the same label in the example above, what this actually produces as an explanation is the shortest path along the smallest node identifiers. Kind of weird, but it makes for a unique explanation where otherwise there would be many. 
+Let's swing in the `topk` operator, which is smarter than `group` and only requires one element (label proposal, in this case) as an explanation. As everyone is actually proposing the same label in the example above, what this actually produces as an explanation is the shortest path along the smallest node identifiers. Kind of weird, but it makes for a unique explanation where otherwise there would be many.
 
 Let's look at the latency plot. We took this one with multiple workers, because... science.
 
@@ -242,17 +242,17 @@ They basically tell us that updates are still millisecond or less, except for so
 
 ### Overheads
 
-What about overheads? Like, how much are we paying extra when we turn on this explanation infrastructure? Yeah, some. Actually a fair bit. We ran the computation with and without explanations, with various numbers of workers, and compared it to Myria, a recent big data system that does graph connectivity. We tried to use SociaLite but it didn't produce the right answers, and GraphX doesn't run on the resources we used (one machine). 
+What about overheads? Like, how much are we paying extra when we turn on this explanation infrastructure? Yeah, some. Actually a fair bit. We ran the computation with and without explanations, with various numbers of workers, and compared it to Myria, a recent big data system that does graph connectivity. We tried to use SociaLite but it didn't produce the right answers, and GraphX doesn't run on the resources we used (one machine).
 
 ![overhead](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-overhead-twitter.png)
 
 There is overhead, and it is non-trivial, but we still end up going faster than other systems. So, "boo overhead" and "yay differential dataflow". Possibly also "boo not giving Myria a fair shot because we don't really understand it". Myria folks, call me if these numbers are surprising. As another data point, GraphX on the same dataset takes about 400 seconds on a 16 node (128 core) cluster, somewhere between our 2- and 4- core numbers, and it neither incrementally updates nor explains anything (except your AWS bill).
 
-The overheads are mostly due to the fact that the reference differential computation is pretty lean. All of the internal indices it uses are keyed by dense unsigned integers, and just use direct indexing into arrays. Some of the explanation operators require indices keyed by pairs, and fall back to a much slower `HashMap` implementation. 
+The overheads are mostly due to the fact that the reference differential computation is pretty lean. All of the internal indices it uses are keyed by dense unsigned integers, and just use direct indexing into arrays. Some of the explanation operators require indices keyed by pairs, and fall back to a much slower `HashMap` implementation.
 
-### Recap. 
+### Recap.
 
-These numbers are great. Zoom. Pow! 
+These numbers are great. Zoom. Pow!
 
 There was something about how it doesn't work, wasn't there?
 
@@ -270,7 +270,7 @@ To get a sense for what goes wrong, let's look at another cool algorithm that di
 
 Stable matching is a problem where you have a bipartite graph, so some nodes are blue and some are red, and each node has some preferences for some of the nodes of the other color, which we indicate by an edge with some preference on it (small values are better). The idea is to find a matching, a subset of these edges, so that no blue and red node would prefer to ditch their current assignment and hook-up with each other instead.
 
-There are a bunch of algorithms for this problem, but there is a really simple one which proceeds in rounds, where each blue node proposes to its most prefered red node that hasn't yet rejected it. Red nodes then look at their proposals and go with whichever is best, walking away from proposals in the last round if they've gotten something better. 
+There are a bunch of algorithms for this problem, but there is a really simple one which proceeds in rounds, where each blue node proposes to its most preferred red node that hasn't yet rejected it. Red nodes then look at their proposals and go with whichever is best, walking away from proposals in the last round if they've gotten something better.
 
 Now, grumpy people might say this requires a lot of nerve on the part of the blue nodes, and is bad behavior on the part of the red nodes, but you can prove that the process ends up with blue-optimal and red-pessimal assignments, so stfu and put yourself out there.
 
@@ -301,11 +301,11 @@ The process terminates when there are no remaining options for unmatched nodes.
 
 ### Explaining matchings
 
-Let's say we run the computation and we see in the output 
+Let's say we run the computation and we see in the output
 
     (frank, mr_scruffles)
 
-Ok, how did that happen? I had lots of people on my list, and put `mr_scruffles` at the end as a joke. If we use our explanation infrastructure, we discover as an explanation (trust me on this) my full list of preferences that I went through, and the preferences for `mr_scruffles`, which he must have keyed in with his cute, furry paws. What we don't see is a good explanation for why everyone else on my list told me to take a hike. 
+Ok, how did that happen? I had lots of people on my list, and put `mr_scruffles` at the end as a joke. If we use our explanation infrastructure, we discover as an explanation (trust me on this) my full list of preferences that I went through, and the preferences for `mr_scruffles`, which he must have keyed in with his cute, furry paws. What we don't see is a good explanation for why everyone else on my list told me to take a hike.
 
 The problem here is that no one actually told me to take a hike. There is no positive data for rejection here. The computation knows that if it doesn't receive a response, it should cross off the proposal. This is the right thing to do, but it baffles the explanation infrastructure, which thought that if it got all the input data it would produce the right output. Nope. There are some *absences* that are just as important (specifically, from the `accpt` collection).
 
@@ -325,14 +325,14 @@ Of course, **REDACTED** had better proposals (perhaps so did `frank's_leg`), and
 There is a relatively simple way to fix things, and amazingly it actually works (in differential). We are going to do a few things, which I will enumerate:
 
 1. We instantiate a second copy of the computation (here: "stable matching") whose input will be the explanation we identify. We use this second copy to try out our explanation and look for issues. As we fix the issue, we'll update the computation, maybe finding more issues to fix.
-2. We merge the outputs of these second copies of operators with those of the reference computation, feeding into the explanation infrastructure. If this second copy outputs the same records as in the reference computation, great, we have matching output. If it outputs BS records that don't exist in the reference computation, those records must be explained. They don't exist, so their "explanation" will serve to correct their existence. 
-3. This may happen multiple times, so we run this process to fixed point, adding (never removing) records to the explanation until the BS records are cleaned up. 
+2. We merge the outputs of these second copies of operators with those of the reference computation, feeding into the explanation infrastructure. If this second copy outputs the same records as in the reference computation, great, we have matching output. If it outputs BS records that don't exist in the reference computation, those records must be explained. They don't exist, so their "explanation" will serve to correct their existence.
+3. This may happen multiple times, so we run this process to fixed point, adding (never removing) records to the explanation until the BS records are cleaned up.
 
 Yeah, it is a bit crazy having all these additional loops around. It works because math. Math says "you're welcome".
 
 All those numbers you saw up above for explaining reachability were using this weird infrastructure. Differential means it has approximately zero overhead when you don't need it (i.e. no iterations required).
 
-In the stable matching examples above, we would get 
+In the stable matching examples above, we would get
 
 	(frank, **REDACTED**)
 	(frank's_leg, mr_scruffles)
@@ -365,11 +365,11 @@ Some of the explanations are big, but not so big; thousands at most. What is goi
 
 The explanations aren't very big, but they do require many rounds to sort out. With random preferences, it is really easy to have a cascade of new work whenever a previously accepted proposal is declined. The next proposal on the list may be the best thing in the world for the recipient, and everything gets shaken up. I anticipate you'd see a lot less of this if there were some background ordering that most of the lists reflected.
 
-In any case, most of the explanations come back with sub-second latency, so you might still call them interactive. They don't screw up the update latency either, so I can maintain a continually updated view of the many reasons I am at home with `mr_scruffles` tonight. 
+In any case, most of the explanations come back with sub-second latency, so you might still call them interactive. They don't screw up the update latency either, so I can maintain a continually updated view of the many reasons I am at home with `mr_scruffles` tonight.
 
-### Overhead 
+### Overhead
 
-The overhead looks a lot like for connected components. 
+The overhead looks a lot like for connected components.
 
 ![overhead](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/smp-overhead-twitter.png)
 
@@ -379,7 +379,7 @@ There are some multiples of elapsed time to compute the matchings. Weirdly, almo
 
 This is totally still on-going research. We have a pile of code we'd like to release. It actually isn't very large, but it is a bit tangled at the moment. There are some macros. Don't look at me like that; you've done this sort of thing before too.
 
-There are in my mind lots of great questions to ask about explaining computations. I think relatively few big data computations don't want explanations in some part of their workflow. They are just too cool and useful. But while we do now have a way to compute and maintain explanations, we have so much to learn about what we *really* need for explanations. 
+There are in my mind lots of great questions to ask about explaining computations. I think relatively few big data computations don't want explanations in some part of their workflow. They are just too cool and useful. But while we do now have a way to compute and maintain explanations, we have so much to learn about what we *really* need for explanations.
 
 Are our stable matching explanations actually "over-explanations"; could we thin them down further, improving both performance, but also the value of the explanations?
 
