--- a/posts/2016-05-19.md
+++ b/posts/2016-05-19.md
@@ -1,4 +1,4 @@
-Jane Bambauer and Krish Muralidhar have pushed [a blog post](http://blogs.harvard.edu/infolaw/2016/05/17/diffensive-privacy/) responding to criticisms of their "Fool's Gold" article. Their response has roughly as much technical shortfall as the Fool's Gold paper, relative to its volume, so I thought I would go through it and comment on points it makes. 
+Jane Bambauer and Krish Muralidhar have pushed [a blog post](http://blogs.harvard.edu/infolaw/2016/05/17/diffensive-privacy/) responding to criticisms of their "Fool's Gold" article. Their response has roughly as much technical shortfall as the Fool's Gold paper, relative to its volume, so I thought I would go through it and comment on points it makes.
 
 To keep you interested, I'm actually going to *agree* with them on one point (!!!!).
 
@@ -8,7 +8,7 @@ The post starts with some background about differential privacy, their article, 
 
 > ... a few other computer scientists have written hostile critiques that aim primarily to impugn our intelligence and honesty rather than engaging with our arguments on the merits.
 
-I think the authors have the causality backwards here. At least for [the post I wrote](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-03.md), their arguments are engaged on their merits and found (by me) lacking. The subsequent attempts to explain the authors' inaccurate statements leads to questions about their intelligence or honesty (or both!). 
+I think the authors have the causality backwards here. At least for [the post I wrote](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-03.md), their arguments are engaged on their merits and found (by me) lacking. The subsequent attempts to explain the authors' inaccurate statements leads to questions about their intelligence or honesty (or both!).
 
 The authors are right that I could have skipped calling them out on their shortcomings, but which would you prefer: civil but dishonest discourse, or candid and honest discourse? The Fool's Gold paper has a position (the clue is in the name): it calls out several people by name for not understanding apparent issues with differential privacy.
 
@@ -24,7 +24,7 @@ There absolutely *are* limitations to differential privacy, and they do have sig
 
 Also, I'm guessing that "have fallen out of vogue" is code for "have substandard privacy guarantees". No one is talking about differential privacy because it is easy to use, it is interesting because it provides real and meaningful privacy guarantees. If the "out of vogue" approaches did this satisfactorily, I wouldn't be here.
 
-And just to be totally clear, I don't have any issues with people who have trouble using differential privacy. It is not yet easy to use. I would like to make it more easy to use. Until that happens, keep using the tools you understand. However, if you have any interest in the world becoming a better place, the right way to do this is to engage rather than dissemble. 
+And just to be totally clear, I don't have any issues with people who have trouble using differential privacy. It is not yet easy to use. I would like to make it more easy to use. Until that happens, keep using the tools you understand. However, if you have any interest in the world becoming a better place, the right way to do this is to engage rather than dissemble.
 
 ## Responses
 
@@ -34,7 +34,7 @@ The heading for each subsection is a quote from their post, each a hypothetical 
 
 ### Response 1: "Differential Privacy should destroy utility—that’s what ensures privacy."
 
-Differential privacy should *limit* utility-that's what ensures privacy. Whether it "destroys" it or not depends on whether your view of utility is "distinguishing between datasets differing in one record". If this is your view of utility, it is fundamentally at odds with differential privacy. However, large swathes of statistics are expressely *not* interested in this view of utility. 
+Differential privacy should *limit* utility-that's what ensures privacy. Whether it "destroys" it or not depends on whether your view of utility is "distinguishing between datasets differing in one record". If this is your view of utility, it is fundamentally at odds with differential privacy. However, large swathes of statistics are expressly *not* interested in this view of utility.
 
 > McSherry therefore seems to be in agreement with us that if we want open access to research data that yields useful insights, Differential Privacy is not an option.
 
@@ -48,7 +48,7 @@ The disagreement between us is both technical and philosophical. Mostly it is a 
 
 ### Response 2: "We exaggerate the damage that Differential Privacy does to utility"
 
-This response starts with the issue that taking the average of unbounded (the authors say "skewed" but skew is irrelevant here) variables can make differential privacy's bounds look bad. This is true, but an identical complaint holds for the law of large numbers: taking an average can be an arbitrarily inaccurate statistical estimator if you increase the range of values in the distribution. The normal response is that, holding the distribution fixed, as you increase the number of samples the accuracy increases. The same response applies for differential privacy. 
+This response starts with the issue that taking the average of unbounded (the authors say "skewed" but skew is irrelevant here) variables can make differential privacy's bounds look bad. This is true, but an identical complaint holds for the law of large numbers: taking an average can be an arbitrarily inaccurate statistical estimator if you increase the range of values in the distribution. The normal response is that, holding the distribution fixed, as you increase the number of samples the accuracy increases. The same response applies for differential privacy.
 
 The central limit theorem and the Laplace mechanism have different bounds on their variance (the latter starts larger but improves faster with samples), but the authors' complaint applies to both. I suspect they don't mean to claim that averages also "destroy utility", or whatever it is they think.
 
@@ -60,17 +60,17 @@ No, it wouldn't.
 
 > Recall that the noise added to meet Differential Privacy is based on “global sensitivity.”
 
-No, it isn't. 
+No, it isn't.
 
-Adding noise based on global sensitivity is *one* possible approch, and as has been *REPEATEDLY* explained to the authors of the post, it is neither the only nor the best approach. The authors then quote from and link to a paper about local sensitivity, which is *literally about how to compute values like the median with more accuracy than using global sensitivity*. The authors of the post have quoted the motivation from the paper, that global sensitivity can be too large, without revealing the main contribution of the paper, identified in its abstract (the next two quotes are from that paper, not the blog post), that there are alternatives: 
+Adding noise based on global sensitivity is *one* possible approach, and as has been *REPEATEDLY* explained to the authors of the post, it is neither the only nor the best approach. The authors then quote from and link to a paper about local sensitivity, which is *literally about how to compute values like the median with more accuracy than using global sensitivity*. The authors of the post have quoted the motivation from the paper, that global sensitivity can be too large, without revealing the main contribution of the paper, identified in its abstract (the next two quotes are from that paper, not the blog post), that there are alternatives:
 
 > NRS09: Our framework allows one to release functions f of the data with instance-based additive noise. That is, the noise magnitude is determined not only by the function we want to release, but also by the database itself.
 
-and that 
+and that
 
 > NRS09: We show how to do this efficiently for several different functions, including the median [...]
 
-The linked paper quite literally addresses the problem the authors claim is fundamental to differential privacy. Seriously. 
+The linked paper quite literally addresses the problem the authors claim is fundamental to differential privacy. Seriously.
 
 Returning to quotes from their post:
 
@@ -78,7 +78,7 @@ Returning to quotes from their post:
 
 No, it wont.
 
-This is followed by some text about my explained alternative for correlation coefficients "but his objection is brief and perplexing." I do believe the authors were perplexed. In such a case, it is reasonable to ask for clarification, as Jane Bambauer did. 
+This is followed by some text about my explained alternative for correlation coefficients "but his objection is brief and perplexing." I do believe the authors were perplexed. In such a case, it is reasonable to ask for clarification, as Jane Bambauer did.
 
 ![A question](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/query.png)
 
@@ -90,7 +90,7 @@ Perhaps it was the oblique reference, or maybe the paper itself, that perplexed 
 
 > McSherry’s technique leaks information about the data set.
 
-No, it doesn't. At least, not in a way that violates differential privacy. When accurate, the result does reveal that there is a large underlying population, which need not be a violation of differential privacy. The paper mentioned above, [Calibrating Noise to Sensitivity in Private Data Analysis](http://research.microsoft.com/en-us/projects/databaseprivacy/sensitivity.pdf), has a proof that differential privacy is maintained; if the authors would like to poke holes in the proof they are welcome (and have been repeatedly invited to do so; they haven't). Rather, the authors repeatedly appeal to prose arguments based on their intuitive understanding of differential privacy. Please stop. The mathematics exist for a reason. 
+No, it doesn't. At least, not in a way that violates differential privacy. When accurate, the result does reveal that there is a large underlying population, which need not be a violation of differential privacy. The paper mentioned above, [Calibrating Noise to Sensitivity in Private Data Analysis](http://research.microsoft.com/en-us/projects/databaseprivacy/sensitivity.pdf), has a proof that differential privacy is maintained; if the authors would like to poke holes in the proof they are welcome (and have been repeatedly invited to do so; they haven't). Rather, the authors repeatedly appeal to prose arguments based on their intuitive understanding of differential privacy. Please stop. The mathematics exist for a reason.
 
 For interested persons, [the code for the examples](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-06.md#can-you-show-me-how-to-do-this) has been available for months. In the authors' defense, it was not tweeted at them so perhaps they were unaware.
 
@@ -100,7 +100,7 @@ This part responds to complaints by Anand Sarwate that there are other related p
 
 ### Response 4: "There are methods other than adding LaPlace noise that satisfy pure Differential Privacy."
 
-Who taught you how to capitalize French things? 
+Who taught you how to capitalize French things?
 
 > Finally, we have occasionally received feedback that the Differential Privacy method we illustrate in our paper—adding Laplace noise—is not the only method that satisfies the pure Differential Privacy standard.
 
@@ -123,6 +123,6 @@ At the risk of repeating myself, and others apparently, a large number of mechan
 
 In summary, it really hasn't.
 
-I think it is important to distinguish between two classes of differential privacy skeptic: there are cranks like the authors who misrepresent their subject to score points, and there are honest analysts who struggle to get sufficient accuracy out of known tools and techniques. The research space currently suffers from too few practitioners advancing (or delineating) the bounds of differential privacy; we have a volume of esoteric theoretical research, but relatively little work translating it (or even simpler results) to practice in clear and useable tools. 
+I think it is important to distinguish between two classes of differential privacy skeptic: there are cranks like the authors who misrepresent their subject to score points, and there are honest analysts who struggle to get sufficient accuracy out of known tools and techniques. The research space currently suffers from too few practitioners advancing (or delineating) the bounds of differential privacy; we have a volume of esoteric theoretical research, but relatively little work translating it (or even simpler results) to practice in clear and useable tools.
 
-For example, I still think that [work done with Davide Proserpio and Sharon Goldberg](http://arxiv.org/abs/1203.3453), which automatically provides privacy guarantees, and does MCMC-style probabilistic inference, has a lot of cool potential. Given that I've recently re-done a bunch of the infrastructure in Rust, perhaps I should port this over as well and start supporting it. 
+For example, I still think that [work done with Davide Proserpio and Sharon Goldberg](http://arxiv.org/abs/1203.3453), which automatically provides privacy guarantees, and does MCMC-style probabilistic inference, has a lot of cool potential. Given that I've recently re-done a bunch of the infrastructure in Rust, perhaps I should port this over as well and start supporting it.
