--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -4,8 +4,8 @@ In this post we will look at a recently re-popularized programming language, [Da
 
 1. Differential dataflow can easily express Datalog programs, which are mostly just `map`, `filter`, and `join` operators with one `iterate` wrapped around the whole thing.
 2. The absolute performance of Datalog computations can be as good or even faster using differential dataflow on my laptop as compared to current cluster-based research prototypes from the databases community.
-3. Differential dataflow enables interactive Datalog computations, both in the sense that 
-    1. the source relations can changed arbitrarily with results automatically corrected, and 
+3. Differential dataflow enables interactive Datalog computations, both in the sense that
+    1. the source relations can changed arbitrarily with results automatically corrected, and
     2. top-down queries can be performed without evaluating the entire computation.
 
 Most of this work started up while I was at ETH Zurich's Systems Group, working with John Liagouris and Zaheer Chothia. At the very end, I mention some more recent work with Semih Salihoglu and Khaled Ammar at Waterloo.
@@ -44,13 +44,13 @@ The rules are executed until they have produced all the facts they could possibl
 	ancestor(mary, john)
 	ancestor(bill, john)
 
-Strictly speaking, a Datalog program only describes how to determine the `ancestor` facts, it doesn't require you to compute them until someone asks "what facts are in `ancestor`?" 
+Strictly speaking, a Datalog program only describes how to determine the `ancestor` facts, it doesn't require you to compute them until someone asks "what facts are in `ancestor`?"
 
 ### Queries
 
-While we could just run that computation above on all of our base facts, until we produce *all* `ancestor` facts, we may end up with way more data than we actually want. As a thought experiment, think out how many `ancestor(X,Y)` tuples we might end up with given at most some number of `parent(X,Y)` tuples. How many ancestors do you have? Probably "two-to-the-something", right? Maybe more if you count frogs and stuff. 
+While we could just run that computation above on all of our base facts, until we produce *all* `ancestor` facts, we may end up with way more data than we actually want. As a thought experiment, think out how many `ancestor(X,Y)` tuples we might end up with given at most some number of `parent(X,Y)` tuples. How many ancestors do you have? Probably "two-to-the-something", right? Maybe more if you count frogs and stuff.
 
-Now multiply that by seven billion. 
+Now multiply that by seven billion.
 
 Instead, Datalog provides support for querying relations. Here is an example query, again from the wikipedia page:
 
@@ -58,11 +58,11 @@ Instead, Datalog provides support for querying relations. Here is an example que
 
 This query asks: for which values of `X` is `ancestor(bill, X)` a fact? This sort of question can in principle be asked and answered without computing the ancestry of entirely unrelated billions-large populations, which is appealing for people who actually want to use these sorts of systems rather than watch them run.
 
-We will learn how to efficiently *query* Datalog computations in this post, but I think it is fair to say that not a lot of the recent big data systems support this. If any of them. 
+We will learn how to efficiently *query* Datalog computations in this post, but I think it is fair to say that not a lot of the recent big data systems support this. If any of them.
 
 ## Differential dataflow
 
-Of course, by now all of you are probably familiar with differential dataflow, but let's review some key concepts for folks who may have just gotten here. There is also an introductory series that might be helpful ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-29.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-11-27.md)). Differential dataflow does not seem to have a wikipedia page, so I am going to have to make all of this up. 
+Of course, by now all of you are probably familiar with differential dataflow, but let's review some key concepts for folks who may have just gotten here. There is also an introductory series that might be helpful ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-29.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-11-27.md)). Differential dataflow does not seem to have a wikipedia page, so I am going to have to make all of this up.
 
 I'll use the running example of Datalog, with the corresponding concepts in differential dataflow called out.
 
@@ -70,7 +70,7 @@ I'll use the running example of Datalog, with the corresponding concepts in diff
 
 Differential dataflow works with collections of records. We can think of records as corresponding to facts to help out the connection to Datalog, but there are some important differences. The main one is that Datalog heavily relies on the sane position that once known, facts do not become un-true. In differential dataflow, the contents of a collection can change arbitrarily, and records that used to be in a collection may not be in the collection in the near future. This makes it more powerful, but with great power comes great donuts.
 
-How do we introduce records into a differential dataflow computation? We need to name a new source of records, whose contents we can either supply explicitly (like the Datalog fragment above does with the `parent` relation), or update interactively as the computation runs. 
+How do we introduce records into a differential dataflow computation? We need to name a new source of records, whose contents we can either supply explicitly (like the Datalog fragment above does with the `parent` relation), or update interactively as the computation runs.
 
 In the context of a timely dataflow scope, here represented by `scope`, we would write:
 
@@ -79,7 +79,7 @@ let dataz = vec![ (("bill", "mary"), 1), (("mary", "john"), 1)];
 let parents = dataz.to_stream(scope).as_collection();
 ```
 
-Let it be known that differential dataflow is not yet optimized for the succint expression of things.
+Let it be known that differential dataflow is not yet optimized for the succinct expression of things.
 
 What we are seeing here is the statement of tuples
 
@@ -118,7 +118,7 @@ parents.iterate(|ancestors| {
 })
 ```
 
-This computation, which we can agree involves several more characters (specifically the `&` character) than the Datalog example above, describes an iterative computation starting from `parents`, which in each round of iteration joins the current result `ancestors` with `parents`, adds in whatever used to be in `ancestors`, takes the distinct results (these are multisets, remember), and uses that for the value of `ancestors` in the next iteration. 
+This computation, which we can agree involves several more characters (specifically the `&` character) than the Datalog example above, describes an iterative computation starting from `parents`, which in each round of iteration joins the current result `ancestors` with `parents`, adds in whatever used to be in `ancestors`, takes the distinct results (these are multisets, remember), and uses that for the value of `ancestors` in the next iteration.
 
 This is basically the same query as written in Datalog up above, just with lots more symbols and concepts. Why would we do such a thing?
 
@@ -130,7 +130,7 @@ The explicit iteration also clarifies what happens if you write a program where 
 
 Differential dataflow doesn't have a notion of "queries"; it just computes the collections you ask it to compute. In the example above, it will determine *all* records in the `ancestors` collection and show them to you. Fortunately, differential dataflow's ability to interactively update input collections will allow us to implement queries against the results of Datalog programs. Let's talk through updating input collections, and build towards querying.
 
-Differential dataflow let you supply new records to input collections, and it will determine the consequences and show the results to you. 
+Differential dataflow let you supply new records to input collections, and it will determine the consequences and show the results to you.
 
 Recall our example of the `(handle, parents)` result from creating a new input stream. The `handle` instance allows us to introduce new *changes* to the input relation. Rather than use weight `1` like we did to introduce the records, we can use other weights, like:
 
@@ -141,7 +141,7 @@ handle.send((("paul", "mary"),  1));
 
 This causes the `parents` relation to change, removing `bill` as a parent of `mary` and replacing him with `paul`.
 
-Because differential dataflow is *awesome*, the collection resulting from the `iterate` call will be updated with 
+Because differential dataflow is *awesome*, the collection resulting from the `iterate` call will be updated with
 
 	(("bill", "mary"), -1)
 	(("bill", "john"), -1)
@@ -150,7 +150,7 @@ Because differential dataflow is *awesome*, the collection resulting from the `i
 
 These are the changes in the `ancestors` relation that result from the changes to the inputs. Notice that we don't see anything about the tuple `("mary", "john")`, because nothing about that tuple has changed. Amazing.
 
-This isn't a query yet, though. We've just screwed around with data, rather than answering something like 
+This isn't a query yet, though. We've just screwed around with data, rather than answering something like
 
 	?- ancestor(bill, X)
 
@@ -246,7 +246,7 @@ Here are the measurements they have for transitive closure on `Tree17` and same 
 
 | problem | BigDatalog | SociaLite | Myria | Spark |
 |---------|-----------:|----------:|------:|------:|
-| tc (17) | 	   49s |   > 1 day |   91s |  244s | 
+| tc (17) | 	   49s |   > 1 day |   91s |  244s |
 | sg (11) |        53s |       OOM |  822s |   OOM |
 
 So it seems that Big Datalog is good at doing these sorts of queries, at least relative to the existing systems. To try and be fair to the existing systems, SociaLite presents a Datalog interface for iterative graph processing but does not claim to be a full-blown Datalog system, and Spark is clearly just here as a punching bag. Pow!
@@ -264,7 +264,7 @@ These graphs are a bit bigger than above, so it shouldn't be much of a cheat unl
 
 | problem | BigDatalog | differential |
 |---------|-----------:|-------------:|
-| tc (17) | 	   49s |    72s / 45s | 
+| tc (17) | 	   49s |    72s / 45s |
 | sg (11) |        53s |          OOM |
 
 Ok, differential dataflow went out of memory on the same generation query on my laptop. This actually makes lots of sense, because the limiting aspect of the `sg` program is that it needs to keep all of the two billion result tuples (8 bytes each) around somehow so that it can suppress duplicates. Actually, to be totally honest I didn't even run the `sg` query, I just wrote `OOM`.
@@ -300,11 +300,11 @@ Of course, we did this by writing a different program that didn't try to materia
 
 The Big Datalog paper continues with graph computations: reachability, connectivity, and single-source shortest paths. These are fairly standard graph computations (what, no PageRank?!?), with the property that they can be expressed in Datalog if you don't mind putting some aggregation in at the end (e.g. produce several short paths in Datalog, then take the shortest of them).
 
-I should say, having just done a crap-ton of OSDI reviews, that I'm getting pretty tired of people just slapping down numbers and saying "ours are better; paper please". It is important to understand what is actually going on that makes the numbers better, because therein lies the science. 
+I should say, having just done a crap-ton of OSDI reviews, that I'm getting pretty tired of people just slapping down numbers and saying "ours are better; paper please". It is important to understand what is actually going on that makes the numbers better, because therein lies the science.
 
-That being said, I'm about to slap down some numbers and observe "ours are better" without explaining why they should be better. 
+That being said, I'm about to slap down some numbers and observe "ours are better" without explaining why they should be better.
 
-Here is the deal: the numbers *shouldn't* be better. Differential dataflow is doing no less than the other systems, and in fact it is doing a fair bit more by leaving the computation in a state where it can be incrementally updated. Perhaps this leaves you in a somewhat dissatisfied state. 
+Here is the deal: the numbers *shouldn't* be better. Differential dataflow is doing no less than the other systems, and in fact it is doing a fair bit more by leaving the computation in a state where it can be incrementally updated. Perhaps this leaves you in a somewhat dissatisfied state.
 
 I couldn't figure out how they chose the edge lengths for SSSP, so I'm going to assume they used length one for each edge; drop me a line if I'm wrong. All non-differential numbers are from the Big Datalog paper, on a cluster of 16 machines with 4 cores (8 threads) each. The differential numbers are from my laptop (16GB RAM, 1 and 2 cores) for the two smaller datasets (`livejournal` and `orkut`, and an Intel Xeon E5-4640 @ 2.40 GHz machine with 32 physical cores and 512G of RAM for the `twitter` dataset (reporting 1 and 16 cores); my laptop doesn't have quite enough RAM for how differential dataflow represents 1.6B edges.
 
@@ -330,9 +330,9 @@ As we discussed earlier, one can view reachability as the magic set transformati
 |      arabic |       213s |      467s |  485s |   174s |              |
 |     twitter |       307s |       OOM | 1051s | 12041s |  763s / 121s |
 
-These measurements seem a bit off, personally. When we evaluated Myria on `twitter`, it took less than 700s to do connectivity on just a single machine. The GraphX paper reports 251s for connectivity on `twitter` using as many machines each with a bit more memory; the three hour measurement above is probably just measuring how the system pages when it doesn't fit in RAM. 
+These measurements seem a bit off, personally. When we evaluated Myria on `twitter`, it took less than 700s to do connectivity on just a single machine. The GraphX paper reports 251s for connectivity on `twitter` using as many machines each with a bit more memory; the three hour measurement above is probably just measuring how the system pages when it doesn't fit in RAM.
 
-Of course, graph connectivity is something one can do much faster if the goal is actually to compute connected components, rather than have systems shoot-outs. For the `twitter` dataset, it takes between 15s and 30s to compute undirected connectivity using something like [union-find](https://en.wikipedia.org/wiki/Disjoint-set_data_structure), depending on how you've represented your graph. All of these systems take longer than this (except SociaLite; we have no idea how long it took to run out of memory), with relatively little discussion of why you would use them for this task when 10x faster single-threaded code exists. 
+Of course, graph connectivity is something one can do much faster if the goal is actually to compute connected components, rather than have systems shoot-outs. For the `twitter` dataset, it takes between 15s and 30s to compute undirected connectivity using something like [union-find](https://en.wikipedia.org/wiki/Disjoint-set_data_structure), depending on how you've represented your graph. All of these systems take longer than this (except SociaLite; we have no idea how long it took to run out of memory), with relatively little discussion of why you would use them for this task when 10x faster single-threaded code exists.
 
 For my part, differential dataflow has this neat "automatically incrementalizes" property which might be a good reason to use it rather than single-threaded union-find.
 
@@ -345,7 +345,7 @@ For my part, differential dataflow has this neat "automatically incrementalizes"
 |      arabic |       276s |      606s | 1083s |   112s |              |
 |     twitter |       260s |       OOM | 1593s |  3677s |   111s / 18s |
 
-The shortest paths computation is basically the same as reachability. In each round, both identify the same sets of reached vertices, just SSSP also tracks a distance with each. Since (as I understand it) the distance is just the round number, new vertices get supressed the second time they are seen, just like with reachability. It is a bit of a mystery why these systems take so much more time than for reachability, so perhaps there is something I'm missing about how edge lengths were set.
+The shortest paths computation is basically the same as reachability. In each round, both identify the same sets of reached vertices, just SSSP also tracks a distance with each. Since (as I understand it) the distance is just the round number, new vertices get suppressed the second time they are seen, just like with reachability. It is a bit of a mystery why these systems take so much more time than for reachability, so perhaps there is something I'm missing about how edge lengths were set.
 
 It is possible that these systems are getting stressed out because, unlike with reachability, the payload that gets carried around (distance) has to be treated as some weird non-monotonic property. In differential dataflow it is just data and you do whatever your program says to do with it, but the Datalog folks seem to view this the same way a cat views a cucumber.
 
@@ -448,7 +448,7 @@ Instead, numbers on the Xeon courtesy John Liagouris (using one core):
 	latency: Duration { secs: 0, nanos: 64377 }
 	latency: Duration { secs: 4, nanos: 707158442 }
 
-The loading time drops to about 52 seconds using 16 cores. Some of the latencies are small because of the 65 million node identifiers, only 42 million actually have incident edges. All of the "tens of microseconds" results are likely just zero-degree vertices. Other numbers are "hundreds of microseconds", though all stayed (barely) sub-second. 
+The loading time drops to about 52 seconds using 16 cores. Some of the latencies are small because of the 65 million node identifiers, only 42 million actually have incident edges. All of the "tens of microseconds" results are likely just zero-degree vertices. Other numbers are "hundreds of microseconds", though all stayed (barely) sub-second.
 
 The multi-level marketing had some complicated program and just had a distasteful feel to it, so I didn't do anything there. It does highlight the point that as programs get more complicated, the value of a layer that manages the planning for you increases. This is the point that Datalog experts can show up and shine, by doing lots of clever transformations to the computation rather than me typing things out by hand. I'm happy to concede that point.
 
@@ -468,9 +468,9 @@ There are some down sides that I thought I would try and be candid about, in the
 
 1. Compile times. Differential dataflow is built on Rust, and Rust is compiled down through LLVM. Specifically, it is *very aggressively* compiled, and the amount of time between writing your program and seeing results the first time can be quite high. Of course, the time to launch the program the next time is trivial, but it is something to factor in if your goal is to make money with infinite data scientists typing on infinite macbooks.
 
-2. Cognitive overhead. Differential dataflow seems to have relatively simple programs once you write them, but there can be a disconnect between what you want to happen and what it does. It is rather clever on your behalf, and almost 100% of the time you try and be even more clever to help it, you undo the cleverness. This lack of intuitive bridge can make it hard for people exploring to directly write the program they want, because they aren't really sure what is going to happen. Perhaps making the methods ALLCAPS would help. 
+2. Cognitive overhead. Differential dataflow seems to have relatively simple programs once you write them, but there can be a disconnect between what you want to happen and what it does. It is rather clever on your behalf, and almost 100% of the time you try and be even more clever to help it, you undo the cleverness. This lack of intuitive bridge can make it hard for people exploring to directly write the program they want, because they aren't really sure what is going to happen. Perhaps making the methods ALLCAPS would help.
 
-You've probably got others too, right? Let me know, and I can put them on the list! 
+You've probably got others too, right? Let me know, and I can put them on the list!
 
 For example, maybe "3. author is insufferable".
 
@@ -481,7 +481,7 @@ Although not considered in the Big Datalog paper, one of the neat things about D
 	relation1(X,Y) := relation2(Y,X)
 	relation2(X,Y) := relation1(X,Y)
 
-This is a pretty dumb example, but you could imagine things being more interesting. For example, we got in to Datalog when John Liagouris wanted to evaluate (read more about this query in [our work on explaning outputs](http://e-collection.library.ethz.ch/view/eth:48721)):
+This is a pretty dumb example, but you could imagine things being more interesting. For example, we got in to Datalog when John Liagouris wanted to evaluate (read more about this query in [our work on explaining outputs](http://e-collection.library.ethz.ch/view/eth:48721)):
 
 	p(X,Z)   :- p(X,Y), p(Y,Z)
 	q(X,Y,Z) :- p(X,W), q(W,Y,Z)
@@ -490,7 +490,7 @@ This is a pretty dumb example, but you could imagine things being more interesti
 	p(X,W)   :- q(X,R,Y), p(Y,Z), u(R,Z,W)
 	q(X,Y,Z) :- q(X,R,W), q(W,P,Z), t(R,P,Y)
 
-This has a bit of mutual recursion going on. 
+This has a bit of mutual recursion going on.
 
 One problem with mutual recursion, at least as it relates to our differential dataflow story, is that it is hard to write one `iterate` block that determines the fixed point of multiple recursively defined collections. The `iterate` operator just lets you iterate one collection, and you have more than one in mind.
 
@@ -553,7 +553,7 @@ The code is checked in as [`src/examples/dataflog.rs`](https://github.com/frankm
 
 One of the coolest things about Datalog, and something not really discussed in the Big Datalog paper, is that you get presented with possibly *cyclic* joins. Cyclic joins are not *iterative* joins (well, they may be) nor *mutually recursive* joins (well, they may be), but rather joins involving multiple relations whose constraints fold back on themselves.
 
-For example, the triangles query presented as `Program 4` in the Big Datalog paper: 
+For example, the triangles query presented as `Program 4` in the Big Datalog paper:
 
 	triangles(X, Y, Z) := arc(X, Y), X < Y, arc(Y, Z), Y < Z, arc(Z, X).
 
@@ -620,6 +620,6 @@ On our data, the fourth rule in there is the real killer, and it is cyclic. If y
 
 ### In the future
 
-The issue with the differential dataflow implementation above is that it keeps too much state in memory. It retains the trace of the computation, because that is how differential dataflow works, and that trace can be as large as (or larger than) the output of the computation. It would have been nice if the in-memory state was only as large as the relations we started with. 
+The issue with the differential dataflow implementation above is that it keeps too much state in memory. It retains the trace of the computation, because that is how differential dataflow works, and that trace can be as large as (or larger than) the output of the computation. It would have been nice if the in-memory state was only as large as the relations we started with.
 
 So, we've done that too (this is the bit with folks from Waterloo). Watch this space.
