--- a/posts/2016-07-17.md
+++ b/posts/2016-07-17.md
@@ -1,10 +1,10 @@
 # Dataflow as Database
 
-This post starts from a recent citation Naiad got, from the [Weaver paper](http://www.vldb.org/pvldb/vol9/p852-dubey.pdf) in VLDB2016. We are going to start with the traditional whinging about science and related work sections and such, but then build up to answer some questions about whether dataflow of functional operators is a suitable way to implement certain database fundamentals. At least, we will try and put the questions in some context, and leave the door open for them to be answered. 
+This post starts from a recent citation Naiad got, from the [Weaver paper](http://www.vldb.org/pvldb/vol9/p852-dubey.pdf) in VLDB2016. We are going to start with the traditional whinging about science and related work sections and such, but then build up to answer some questions about whether dataflow of functional operators is a suitable way to implement certain database fundamentals. At least, we will try and put the questions in some context, and leave the door open for them to be answered.
 
 Then we will write and measure some differential dataflow code for a transactional analytic graph store. Kinda.
 
-As a warning, I get that lot of you work on databases and know lots about databases and I may be grossly oversimplifying many important things in this post. The goal of the post really isn't (as much as it might sound like it) to trivialize work in this space, so much as to think out loud about some simpler ways we could approach problems, cleaning up a bit of mess for several use cases. The ideas here are probably very bad for e.g. (i) geo-distributed databases, (ii) exotic fault-tolerance, (iii) actual databases people need to use; you are totally welcome to point this out, but no prizes will be awarded. 
+As a warning, I get that lot of you work on databases and know lots about databases and I may be grossly oversimplifying many important things in this post. The goal of the post really isn't (as much as it might sound like it) to trivialize work in this space, so much as to think out loud about some simpler ways we could approach problems, cleaning up a bit of mess for several use cases. The ideas here are probably very bad for e.g. (i) geo-distributed databases, (ii) exotic fault-tolerance, (iii) actual databases people need to use; you are totally welcome to point this out, but no prizes will be awarded.
 
 ## Background and motivation.
 
@@ -72,7 +72,7 @@ color.filter(|(e,c)| c == ColorEnum::Red)
      .count();
 ```
 
-Maybe you would join `color` with `edges` to make sure the edge exists, or with some other properties to get more advanced information (red *and* dashed edges). You can even join the colors with each other and connect endpoints of edges with the same color. Why wouldn't you want to do that? 
+Maybe you would join `color` with `edges` to make sure the edge exists, or with some other properties to get more advanced information (red *and* dashed edges). You can even join the colors with each other and connect endpoints of edges with the same color. Why wouldn't you want to do that?
 
 It's all just data, and you can use whatever computation you would like with it.
 
@@ -82,13 +82,13 @@ Naiad, differential dataflow specifically, takes as input a sequence of updates 
 
 For various reasons, the database community doesn't subscribe to the "correct answer" school of thought, because correctness is just like your point of view, man. Instead, the community has some 31 flavors of "consistency", which are each a distinct rationalization for the incorrect answer you might have just gotten back, motivated mostly by potential performance issues. This approach has been wildly successful, and the distributed database landscape is exactly the paragon of clarity, reliability, and robustness you might imagine it would be.
 
-Instead of "correct", the database community speaks of [ACID transactions](https://en.wikipedia.org/wiki/ACID), for *atomicity*, *consistency*, *isolation*, and *durability*. The first three are roughly "correctness", in that violating any of them corresponds to not computing the correct answer, or screwing things up generally. Durability is more interesting, and is about ensuring that before you provide an output, you must be sure that subsequent outputs will reflect it even if someone pulls the rug out from under you or your computer. This is often where things go wrong, because computer failures are often rather surprising. 
+Instead of "correct", the database community speaks of [ACID transactions](https://en.wikipedia.org/wiki/ACID), for *atomicity*, *consistency*, *isolation*, and *durability*. The first three are roughly "correctness", in that violating any of them corresponds to not computing the correct answer, or screwing things up generally. Durability is more interesting, and is about ensuring that before you provide an output, you must be sure that subsequent outputs will reflect it even if someone pulls the rug out from under you or your computer. This is often where things go wrong, because computer failures are often rather surprising.
 
 Durability seems much more manageable for functional computations, in which the output is fully defined by computation and input. In such a setting, we can start to report outputs as soon as the corresponding inputs are made durable. You might get a bit stressed out that this implies a recovery strategy of replaying all of history, but this isn't actually the case, and we will say a bit about this later on. All that I mean to say here is that durability is a lot less scary when your output only reflects the input, and not weird non-deterministic choices your system made along the way.
 
-### (iii) Look-ups 
+### (iii) Look-ups
 
-But databases aren't about computation, they are about storing data and getting it back later, right? 
+But databases aren't about computation, they are about storing data and getting it back later, right?
 
 This is also just computation: a sequence of read and write requests has (or should have) a well-defined answer for what you get back for each read. You could implement this computation using a database, but there are other ways. You could almost certainly write the sequential code to process such a sequence of reads and writes, probably using something like a HashMap to store written values.
 
@@ -104,19 +104,19 @@ writes.semijoin(&reads)
       .inspect(|x| println!("read: {:?}", x));
 ```
 
-The `semijoin` operator pulls out `(key, val)` entries from `writes` whose `key` appears in `reads`. 
+The `semijoin` operator pulls out `(key, val)` entries from `writes` whose `key` appears in `reads`.
 
 As you add entries to `reads` the correct answer changes to include the corresponding entries in `writes`, just like you want to look up values in a database. Moreover, as you add entries to `writes` the correct answer changes to include those entries who have existing keys in `read`, so this is actually more like a primitive pub-sub system. You can turn it in to a look-up by unsubscribing once you've gotten what you need (sending a negative weighted `key` into `reads`).
 
 ## An example
 
-Let's work through a simple example, where we build a graph database that can respond to transactional updates to its inputs, allows you to query and monitor graph neighborhoods, and also for kicks allows you to perform reachability queries from nodes and monitor their results. 
+Let's work through a simple example, where we build a graph database that can respond to transactional updates to its inputs, allows you to query and monitor graph neighborhoods, and also for kicks allows you to perform reachability queries from nodes and monitor their results.
 
 The code we will discuss is about 40 lines (plus several driver lines), and you can get it in the differential dataflow repository at [examples/weaver.rs](https://github.com/frankmcsherry/differential-dataflow/blob/master/examples/weaver.rs).
 
 ### Transactional updates
 
-The first thing we'll do is define an input for our transactional updates. 
+The first thing we'll do is define an input for our transactional updates.
 
 ```rust
 // transactional updates to edge collection.
@@ -124,13 +124,13 @@ let (trans_input, trans) = scope.new_input();
 let trans = trans.as_collection();
 ```
 
-Ok, super easy and just as uninformative. 
+Ok, super easy and just as uninformative.
 
 I've decided that our transactional updates are going to be represented by a bunch of tuples `(u64, bool, Edge)` whose fields indicate, respectively
 
-1. a transaction identifier, 
-2. whether this is a read (true) or a write (false), and 
-3. if it is a read what value we require, and if a write what value to write. 
+1. a transaction identifier,
+2. whether this is a read (true) or a write (false), and
+3. if it is a read what value we require, and if a write what value to write.
 
 We will keep all writes with a given transaction id exactly when all of the reads with that same transaction id are still valid. In our case we are using multisets, so a read being valid means that the record read still exists; we will abort transactions with any reads of records that are no longer present.
 
@@ -148,7 +148,7 @@ let (handle, graph) = scope.loop_variable(u64::max_value(), 1);
 let graph = graph.as_collection();
 ```
 
-All that we have said here is that we want `graph` to be a collection that we can use now and define later (said in Hans and Franz voice for extra awesome). 
+All that we have said here is that we want `graph` to be a collection that we can use now and define later (said in Hans and Franz voice for extra awesome).
 
 We have also indicated a few things about how the dataset interacts with times: the data circulates for `u64::max_value()` iterations, each time incrementing its index by `1`. This is timely dataflow's way of making sure that when we use the data, we only get to see the past. This ensures that there are no cyclic definitions in our computation; we may use the same name, `graph`, but we are referring to a previous instance of that data.
 
@@ -156,7 +156,7 @@ We have also indicated a few things about how the dataset interacts with times: 
 
 The next thing to do is determine, for some existing `graph`, how would we like to define the next version of `graph`. We will want to determine which transactions we should commit and which we should abort. Let's determine which to abort because that is a bit easier.
 
-The `aborts` collection will contain transaction ids that we should abort, because they have a read that is no longer valid. 
+The `aborts` collection will contain transaction ids that we should abort, because they have a read that is no longer valid.
 
 ```rust
 // transactions with reads not found in the edge store
@@ -167,7 +167,7 @@ let aborts = edges.filter(|x| x.1)
                   .distinct();
 ```
 
-The computation isn't all that weird: we filter down to just reads, and transform the records to be pairs `(edge, t_id)`. We then `antijoin` this with the graph itself; an [antijoin](https://en.wikipedia.org/wiki/Relational_algebra#Antijoin_.28.E2.96.B7.29) is like the opposite of a [semijoin](https://en.wikipedia.org/wiki/Relational_algebra#Semijoin_.28.E2.8B.89.29.28.E2.8B.8A.29): it passes records whose key is *not* present in the second argument. In this case, we will pass read requests that do not appear in the `graph` dataset because those are the ones that should cause an abort. We pull out the transaction id and call `distinct` because of how we will use `aborts`. 
+The computation isn't all that weird: we filter down to just reads, and transform the records to be pairs `(edge, t_id)`. We then `antijoin` this with the graph itself; an [antijoin](https://en.wikipedia.org/wiki/Relational_algebra#Antijoin_.28.E2.96.B7.29) is like the opposite of a [semijoin](https://en.wikipedia.org/wiki/Relational_algebra#Semijoin_.28.E2.8B.89.29.28.E2.8B.8A.29): it passes records whose key is *not* present in the second argument. In this case, we will pass read requests that do not appear in the `graph` dataset because those are the ones that should cause an abort. We pull out the transaction id and call `distinct` because of how we will use `aborts`.
 
 ```rust
 // restrict writes to those that with no bad reads.
@@ -184,7 +184,7 @@ The `aborts` collection is just used to filter the set of writes. Again we use `
 Finally, we want to commit these writes. This is just a matter of merging the committed writes with the existing `graph` data, and binding that to be the definition of the next instance of `graph`:
 
 ```rust
-// set `graph` to be commited writes.
+// set `graph` to be committed writes.
 commits.concat(&graph).inner.connect_loop(handle);
 ```
 
@@ -207,13 +207,13 @@ let query_probe = graph.semijoin(&query)
                        .probe().0;
 ```
 
-This fragment puts together a `query` input which we will feed with node identifiers. The node indentifiers get semijoined with the graph dataset to return only those edges with a source in the `query` collection. We might print out the result because we don't have anything better to do with it, and put a `probe` on the end. 
+This fragment puts together a `query` input which we will feed with node identifiers. The node identifiers get semijoined with the graph dataset to return only those edges with a source in the `query` collection. We might print out the result because we don't have anything better to do with it, and put a `probe` on the end.
 
 The probe provides us with information about the completeness of data at this point in the dataflow graph. It is what allows us to know that we have seen all of the results for a specific timestamp. If we submit a batch of queries, this will tell us when we have seen all of the results for these queries. The probe only operates at the timestamp granularity, not at the transaction id granularity. If we really want the latter it might be important not to batch transactions within a timestamp (or to think harder).
 
 As all queries are standing queries, the probe also gives us valuable information even when we don't issue new queries: when the graph data change, it is what lets us know that we have seen all the corresponding changes in query results, even if there are none.
 
-If you would rather have a more direct and invasive view of the data, the `arrange` operator, which `join` and `semijoin` and `antijoin` all use internally, provides a shared read-only handle to a multiversioned index representing the data. You could totally write a timely dataflow operator that looks at that and gives answers back quickly, as appropriate. You would still need to do this on the timely worker threads though, because Rust's `Rc` shared references cannot be shared between threads, to avoid data races. You could rewrite some things and make the sharing through threadsafe reference counting, but this starts to be something you get to do, rather than me. 
+If you would rather have a more direct and invasive view of the data, the `arrange` operator, which `join` and `semijoin` and `antijoin` all use internally, provides a shared read-only handle to a multiversioned index representing the data. You could totally write a timely dataflow operator that looks at that and gives answers back quickly, as appropriate. You would still need to do this on the timely worker threads though, because Rust's `Rc` shared references cannot be shared between threads, to avoid data races. You could rewrite some things and make the sharing through threadsafe reference counting, but this starts to be something you get to do, rather than me.
 
 ### Computation
 
@@ -230,7 +230,7 @@ let roots_probe = result.inspect(|x| println!("reachable: {:?}", x))
                         .probe().0;
 ```
 
-All we do here is create a new collection which will host root identifiers, then call into the `reach` routine which reports those nodes reachable from each root. 
+All we do here is create a new collection which will host root identifiers, then call into the `reach` routine which reports those nodes reachable from each root.
 
 We get a new probe here, because we like the idea that we can independently report results from this computation and from the queries up above. If the queries come back quickly we can see that through `query_probe`, even if `roots_probe` isn't quite ready to confirm that we have seen all of its results yet. This keeps the bfs computation from blocking our ability to look up data, in principle (in practice, the CPU is always doing something, and if it is doing BFS then it isn't probably isn't doing query look-ups).
 
@@ -290,7 +290,7 @@ while query_probe.lt(&edges.time()) || roots_probe.lt(&edges.time()) {
 }
 ```
 
-This is pretty similar, except rather than send any edge data we have issued a query for the edges from node `2`, and we ran a reachability query starting from node `2`. 
+This is pretty similar, except rather than send any edge data we have issued a query for the edges from node `2`, and we ran a reachability query starting from node `2`.
 
 	query result: ((2, 4), 1)
 	reachable: ((2, 2), 1)
@@ -350,7 +350,7 @@ while query_probe.lt(&edges.time()) || roots_probe.lt(&edges.time()) {
 }
 ```
 
-This transaction wants to add `(5,0)`, which would be awesome, but it needs both `(0,1)` and `(0,2)` to be present in the graph. The first edge is, but the second edge is not, so `aborts` gets a new transaction id, `4`, and the write is not commited. I secretly put an `inspect` as part of `aborts` so that we could see:
+This transaction wants to add `(5,0)`, which would be awesome, but it needs both `(0,1)` and `(0,2)` to be present in the graph. The first edge is, but the second edge is not, so `aborts` gets a new transaction id, `4`, and the write is not committed. I secretly put an `inspect` as part of `aborts` so that we could see:
 
 	tid: 4	read failure: (0, 2)
 
@@ -384,7 +384,7 @@ This time we actually manage to add an edge, `(0,4)` rather than `(0,5)` I guess
 	reachable ((2, 1), 1)
 	reachable ((2, 3), 1)
 
-We see the new edge, and we see a lot of new distances from `2`. The loop back means that we can now reach all of the nodes in the graph (the tree is now very happy, if a bit misshapen). We also know that there are no new neighbors of `2`, because `query_probe` tells us we have seen everything there is to see. 
+We see the new edge, and we see a lot of new distances from `2`. The loop back means that we can now reach all of the nodes in the graph (the tree is now very happy, if a bit misshapen). We also know that there are no new neighbors of `2`, because `query_probe` tells us we have seen everything there is to see.
 
 In fact, it could have told us this much earlier if we wrote the code slightly differently. Consider
 
@@ -458,13 +458,13 @@ aborts.iterate(|abort| {
          .map(|((_,t),())| t)
          .distinct()
 })
-``` 
+```
 
 Ok, what just happened? We computed, from a collection of transactions and initial memory, the ids of those transactions that should abort in a sequential execution by transaction id. Except we did it using only data-parallel operators. Sequential computation, done in parallel. How delightful.
 
 Of course, in the worst case, we may need to perform a number of iterations equal to the number of transactions, but in the more optimistic case where not all so much conflicts, we just need to identify and propagate aborts (from the optimistic "no aborts" starting state).
 
-It is sane to be skeptical, but 
+It is sane to be skeptical, but
 
 1. Looking a bit closer most of these crazy operators are thing like `map` and `filter` and `concat`; there are two `antijoin`s, two `distinct`s, and one `join_map`. Only one of these, the `join_map`, tracks the full volume of data; the other operators just work with the current transactions.
 
@@ -474,7 +474,7 @@ It is sane to be skeptical, but
 
 So let's see what we can do here, performance-wise. I don't want to get anyone *actually* excited about performance, because we are skipping lots of important things like durability, or cleaning up after ourselves. On the other hand, we aren't using a cluster, we are just using my laptop. I'm not sure who that favors.
 
-The first non-bitcoin experiment in the Weaver paper is with the `livejournal` graph, which is really small (256MB). I don't really understand the workload from the paper, but it is a mix of reads and writes, I can't tell if any transactions actually read the data and then write back, or if they are all blind writes. The reads don't do any writing, though. 
+The first non-bitcoin experiment in the Weaver paper is with the `livejournal` graph, which is really small (256MB). I don't really understand the workload from the paper, but it is a mix of reads and writes, I can't tell if any transactions actually read the data and then write back, or if they are all blind writes. The reads don't do any writing, though.
 
 We aren't going to do a bake-off, so let's just try some similar sorts of queries.
 
@@ -515,13 +515,13 @@ Let's do some actual transactions now. I have no clue what a good workload is he
 |         10 |   1,000 | 0.862126996s |  11,599.22 txs/sec |
 |          1 |   1,000 | 0.402891740s |   2,482.06 txs/sec |
 
-So what do we see here? If we have large-ish batches of transactions to resolve at once, we can get pretty high throughput, even though they are weird and messed up and might all conflict with each other. However, the act of determining which transactions will cause others to abort is just a data-parallel computation, working on relatively modest data (the transactions themselves and any read locations). 
+So what do we see here? If we have large-ish batches of transactions to resolve at once, we can get pretty high throughput, even though they are weird and messed up and might all conflict with each other. However, the act of determining which transactions will cause others to abort is just a data-parallel computation, working on relatively modest data (the transactions themselves and any read locations).
 
-Weaver's concern, that explicitly ordering too many transactions will involve too much coordination, doesn't seem to apply here because a data-parallel system like timely doesn't have to coordinate on a per-record basis. I guess we also are just using one computer, but there totally wouldn't be much coordination with more computers either. There would be data *exchange* in volume, as part of the abort computation, but not tight coordination. 
+Weaver's concern, that explicitly ordering too many transactions will involve too much coordination, doesn't seem to apply here because a data-parallel system like timely doesn't have to coordinate on a per-record basis. I guess we also are just using one computer, but there totally wouldn't be much coordination with more computers either. There would be data *exchange* in volume, as part of the abort computation, but not tight coordination.
 
 The times above are also quite decent from a latency point of view. Even with a batch size of 1,000 all of the transactions are resolved in an average of under seven milliseconds. The only reason not to batch transactions, given that we will properly order them for you, would be concern about latency, so this is re-assuring.
 
-These numbers will obviously change as the workload changes, and the may change *substantially*. You can see that the rates are an order of magnitude less than the conflict-free read workload, and the rates could drop orders of magnitudes more if the workload focuses conflicts in an even smaller set. 
+These numbers will obviously change as the workload changes, and the may change *substantially*. You can see that the rates are an order of magnitude less than the conflict-free read workload, and the rates could drop orders of magnitudes more if the workload focuses conflicts in an even smaller set.
 
 I'm going to keep poking on evaluating this, as I suspect it will surface some more bugs / issues. To be clear, this approach isn't supposed to be "the right answer", it is just supposed to be interesting.
 
@@ -529,9 +529,9 @@ I'm going to keep poking on evaluating this, as I suspect it will surface some m
 
 I'm not actually going to evaluate this, because `ActivityMonitor.app` is not exactly a scientific instrument, but some words are in order. The crazy dataflow we put together uses operators that store traces of the data they've seen. As a computation proceeds, these collections will grow. In the present Rust implementation, they will grow without bound, which is another reason I didn't measure things.
 
-Another concern is that the number of operators that store state is not "one". The collection of data, the `livejournal` graph, is stored in multiple places in the computation. This is normally a horrible idea, because databases often try to work off of the principle that there is one source of truth somewhere (usually some snapshots plus a log), so that when things go wrong you have a leg to stand on. We are doing something different, letting the input be the one source of truth, and our computation derive from that. 
+Another concern is that the number of operators that store state is not "one". The collection of data, the `livejournal` graph, is stored in multiple places in the computation. This is normally a horrible idea, because databases often try to work off of the principle that there is one source of truth somewhere (usually some snapshots plus a log), so that when things go wrong you have a leg to stand on. We are doing something different, letting the input be the one source of truth, and our computation derive from that.
 
-There is redundancy in what we are storing in memory, it could (and should) be reduced, which (i) will improve the memory utilization, but (ii) will not make the design any more satisfying to responsible database practitioners. 
+There is redundancy in what we are storing in memory, it could (and should) be reduced, which (i) will improve the memory utilization, but (ii) will not make the design any more satisfying to responsible database practitioners.
 
 ### Graph traversals
 
@@ -571,17 +571,17 @@ Let's say just a bit about some things I didn't cover properly. There are probab
 
 ### Durability
 
-Durability is a serious question in these settings. It's great to run laptop measurements on data you have on SSD and just load up each time you run, but what if you are getting this data from the web, or clients, or something like that? It needs to go somewhere persistent, because if "your laptop" crashes or gets taken away with 24 hours notice or some crap like that, we don't really have the data anymore do we? 
+Durability is a serious question in these settings. It's great to run laptop measurements on data you have on SSD and just load up each time you run, but what if you are getting this data from the web, or clients, or something like that? It needs to go somewhere persistent, because if "your laptop" crashes or gets taken away with 24 hours notice or some crap like that, we don't really have the data anymore do we?
 
 Nope.
 
-So what is the story here? The "story", which is a great decription of it, is that with a functionally defined computation, the input itself is what gives us durability, rather than clever implementation of index internals. If something explodes and we need to start over, we can: from the input!
+So what is the story here? The "story", which is a great description of it, is that with a functionally defined computation, the input itself is what gives us durability, rather than clever implementation of index internals. If something explodes and we need to start over, we can: from the input!
 
 At this point you are just about to fire me, but: each of the operators in a differential dataflow computation work by processing piles of differences for each logical time. They index the differences for the times, and then logically commit them. At this point we know that they are correct: any re-execution of the same computation on the same input will derive these same differences at each of these times. So, we can write them down somewhere, and if we ever need to recover just load them up, no questions asked (other than: any corruption?).
 
 Even better, in responsible implementations of differential dataflow (not yet!) these piles of differences are merged as time proceeds, keeping the number of active piles manageably small. As they are merged, the piles start to correspond to the accumulated differences over a range of times. The *exactly defined* accumulated differences over a specific set of times.
 
-The functional nature of the computation makes recovery much simpler in many ways. The state at each worker can simply be re-loaded if available, and re-computed if it is not. The re-computation needn't be very complicated, and only needs to happen for missing data. The piles of index data are laid out in memory in a binary-searchable format, and just by mapping them into memory they can be used immediately while we rebuild indices. 
+The functional nature of the computation makes recovery much simpler in many ways. The state at each worker can simply be re-loaded if available, and re-computed if it is not. The re-computation needn't be very complicated, and only needs to happen for missing data. The piles of index data are laid out in memory in a binary-searchable format, and just by mapping them into memory they can be used immediately while we rebuild indices.
 
 This all seems like it is wild speculation and should probably be detailed out, but ideally we agree (maybe?) that this is now a discussion about performance, rather than about correctness.
 
@@ -589,7 +589,7 @@ This all seems like it is wild speculation and should probably be detailed out, 
 
 Differential dataflow works off of streams of data, but it still (I know!) doesn't do anything like garbage collection. It really should and I've mostly just been too lazy to write and commit benchmarks that show performance sucking without it. An a computation proceeds, the memory footprint should somehow stay bounded, even as the total number of transactions processed increases. Logically there is nothing that prevents this (Naiad did such a thing), but the current code doesn't, and it probably only makes things slower.
 
-Cleaning up is also the same thing that would give us the small number of commitable piles of differences mentioned up above. I should really just do it. 
+Cleaning up is also the same thing that would give us the small number of committable piles of differences mentioned up above. I should really just do it.
 
 ### Usability
 
@@ -617,4 +617,4 @@ I get the impression that some amount of database research is moving in this dir
 
 You should all read the paper, even if I complain about its related work section. [HyperDex](http://hyperdex.org) and related projects are cool, and aimed at sorting out issues in real systems by doing research. At one point I was thinking about using it to provide differential dataflow's fault tolerance layer, using it as the key-value store backing operators.
 
-Also, Gün isn't the primary author on the Weaver paper, Ayush Dubey is, but I don't know Ayush well enough so I made fun of Gün instead. If you think Weaver is cool, props go to Ayush (and Greg and Robert). 
+Also, Gün isn't the primary author on the Weaver paper, Ayush Dubey is, but I don't know Ayush well enough so I made fun of Gün instead. If you think Weaver is cool, props go to Ayush (and Greg and Robert).
