--- a/posts/2016-07-26.md
+++ b/posts/2016-07-26.md
@@ -2,7 +2,7 @@
 
 I'm going to take this post to try and outline what I think is an important direction for differential dataflow, and to explain how to start moving in this direction. I think I have a handle on most of the path, but talking things out and explaining them, with examples and data and such, makes me a lot more comfortable before just writing a lot of code.
 
-The main goal is to support "high resolution" updates to input streams. Right now, updates to differential dataflow come in batches, and get relatively decent scaling as long as the batches are not small. While you can cut the size of batches to improve resolution, increasing the number of workers no longer improve performance. 
+The main goal is to support "high resolution" updates to input streams. Right now, updates to differential dataflow come in batches, and get relatively decent scaling as long as the batches are not small. While you can cut the size of batches to improve resolution, increasing the number of workers no longer improve performance.
 
 It would be *great*, and this write-up is meant to be a first step, to be able to have input updates timestamped with the nanosecond of their arrival and the corresponding output updates with the same resolution, while still maintaining the throughput you would expect for large batch updates.
 
@@ -35,7 +35,7 @@ roots.map(|root| (root, root))
 
 The result of this computation is a collection of pairs `(root, node)` corresponding to those elements `root` of `roots`, and those elements `node` they can reach transitively along elements in `edges`.
 
-Of course, the heart of differential dataflow lies in incrementally updating its computations. We are interested in what happens to this computation as the inputs `roots` and `edges` change. More specifically, 
+Of course, the heart of differential dataflow lies in incrementally updating its computations. We are interested in what happens to this computation as the inputs `roots` and `edges` change. More specifically,
 
 1. The `roots` collection may be updated by adding and removing root elements, which issue and cancel standing queries for reachable nodes, respectively.
 
@@ -67,11 +67,11 @@ These curves are very different from the curves above. I couldn't compute the 10
 
 Differential dataflow's internal data structures are append-only, and over the course of 10,000 updates we are dumping a large number of updates *relative to the number of nodes*. Back when we had one million nodes, doing 100,000 updates wasn't such a big deal because on average each node got just a few (multiply by ten, because of the roots!). With only 1,000 nodes, all of those updates are being forced onto far fewer nodes, which mean that each node has a much more complicated history. Unfortunately, to determine what state a node is currently in, at any point in the computation, we need to examine all of its history.
 
-As the number of updates for each key increases, the amount of work we have to do for each key increases. 
+As the number of updates for each key increases, the amount of work we have to do for each key increases.
 
 ### Resolution and scaling
 
-How about we try to speed things up by adding more workers? Perhaps unsurprisingly, with single-element updates, multiple workers do not really help out. At least, the way the code is writen at the moment, all the workers chill out waiting for that single update to get sorted out before moving on to the next update. As there is only a small amount of work to do, most workers sit on their hands instead of do productive work.
+How about we try to speed things up by adding more workers? Perhaps unsurprisingly, with single-element updates, multiple workers do not really help out. At least, the way the code is written at the moment, all the workers chill out waiting for that single update to get sorted out before moving on to the next update. As there is only a small amount of work to do, most workers sit on their hands instead of do productive work.
 
 Let's evaluate this, plus alternatives we might have hoped for. We are going to do single element updates 10,000 times to the two million edge graph, but we will also do 10 element updates 1,000 times, and 100 element updates 100 times. We are doing the same set of updates, just in coarser granularities, leading to lower resolution outputs.
 
@@ -87,13 +87,13 @@ While we can eyeball the latencies and see some trends, what are the actual thro
 |         10 |  1988.71/s |   2530.23/s |   1.272x |
 |        100 |  1563.32/s |   2743.31/s |   1.755x |
 
-Something good seemed to happen for one worker batch size 10 that doesn't happen to batch size 100; I'm not sure what that is about. But, we see that the second worker helps more and more with increasing batch sizes. We don't get 2x improvement, which is partly due to the introduction of data exchange going from one to two workers (no data shuffling happens for one worker). 
+Something good seemed to happen for one worker batch size 10 that doesn't happen to batch size 100; I'm not sure what that is about. But, we see that the second worker helps more and more with increasing batch sizes. We don't get 2x improvement, which is partly due to the introduction of data exchange going from one to two workers (no data shuffling happens for one worker).
 
 #### What's going on?
 
 This isn't too mysterious: processing single elements at a time and asking all workers to remain idle until each is finished leaves a lot of cycles on the table. At the same time, lumping lots of updates together improves the utilization and allows more workers to reduce the total time to process, but comes at the cost of resolution: we can't see which of the 100 updates had which effect.
 
-We would love to get the resolution of single-element updates with the throughput scaling of the batched updates, if at all possible. We'd also like the *latency* of the single-element updates, but note that this is not the same thing as either resolution or throughput. 
+We would love to get the resolution of single-element updates with the throughput scaling of the batched updates, if at all possible. We'd also like the *latency* of the single-element updates, but note that this is not the same thing as either resolution or throughput.
 
 *	**Resolution** is important for correctness; we can't alter the resolution of inputs and outputs without changing the definition of the computation itself.
 
@@ -115,7 +115,7 @@ These aren't really grand challenges or anything, especially as I think I know h
 
 ## The problems
 
-There are two main problems that we are going to want to re-work bits of differential dataflow to fix. There are also some secondary "constraints", which are currently non-issues but which we could break if we try and be too clever. 
+There are two main problems that we are going to want to re-work bits of differential dataflow to fix. There are also some secondary "constraints", which are currently non-issues but which we could break if we try and be too clever.
 
 To give you a heads up, and to let you skip around, the problems (with links!) are:
 
@@ -164,7 +164,7 @@ Ideally, we would define an interface for the storage layer, so that operators c
 
 	The history of `data` is used by many operators to determine (i) the cumulative weight at any other `time`, (ii) which times are associated with a `key`, which drives when user-defined logic needs to be re-run.
 
-[Constraint #1](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-1-compact-representation-in-memory) makes life a little difficult for random access, navigation, and mutation, as these usually fight with compactness. Perhaps less obviously, [Constraint #2](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-2-shared-index-structures-between-operators) complicates in-place updating, because multiple readers may share read access to the same hunk of memory, and something needs to stay true about it. 
+[Constraint #1](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-1-compact-representation-in-memory) makes life a little difficult for random access, navigation, and mutation, as these usually fight with compactness. Perhaps less obviously, [Constraint #2](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-2-shared-index-structures-between-operators) complicates in-place updating, because multiple readers may share read access to the same hunk of memory, and something needs to stay true about it.
 
 #### A proposal
 
@@ -184,7 +184,7 @@ My best plan for the moment is something like a log-structure merge trie, which 
 
 Adding new batches of data is standard; this type of data structure is meant to be efficient at writing, with the main (only?) cost being the merging. As the collections are immutable, this can happen in the background, but needs to happen at a sufficient rate to avoid falling behind. However, merging feels like a relatively high-throughput operation compared to a large amount of random access (computation) that will come with each inserted element. Said differently, we only merge in data involved in computation, so we shouldn't be doing more writes than reads.
 
-Reading data out requires indexing into each of the tries to find a target key. One could look into each of the tries for the key, using something like binary search, or a galloping cursor (as most operators process keys in some known order). Another option is to maintain an index for keys, indicating for each the lowest level (smallest) trie in which the key exists and the key's offset in that trie's `keys` field. With each `(K, usize)` pair, we could store again an index of the next-lowest level trie in which the key exists and the key's offset there. 
+Reading data out requires indexing into each of the tries to find a target key. One could look into each of the tries for the key, using something like binary search, or a galloping cursor (as most operators process keys in some known order). Another option is to maintain an index for keys, indicating for each the lowest level (smallest) trie in which the key exists and the key's offset in that trie's `keys` field. With each `(K, usize)` pair, we could store again an index of the next-lowest level trie in which the key exists and the key's offset there.
 
 This allows us to find the keys and their tries with one index look-up and as many pointer jumps as trie levels in which the key exists. Adding and merging tries only requires updating the index for involved keys, and does not require rewriting anything in existing trie layers.
 
@@ -210,7 +210,7 @@ struct Trie<V, T> {
 
 I think this design makes a good deal of sense in principle, but it remains to see how it will work out in practice. On the plus side, it doesn't seem all that complicated at this point, so trying it out shouldn't be terrifying. Also, I'm much happier with something that works in principle, maybe loses a factor of two over a better implementation, but doesn't require a full-time employee to maintain.
 
-The design has a few other applealing features: each of the bits of state are contiguous ordered hunks of memory, 
+The design has a few other appealing features: each of the bits of state are contiguous ordered hunks of memory,
 
 1. They are relatively easy to serialize to disk and `mmap` back in.
 
@@ -226,9 +226,9 @@ Latency increases without bound as the computation proceeds. If we were to look 
 
 This is not unexpected for an implementation whose internal datastructures are append-only. As a differential dataflow computation proceeds, each operator absorbs changes to its inputs and appends them to its internal representation of the input. This representation grows and grows, which means (i) it takes more memory, and (ii) the operator must flip through more memory to determine the state at any given logical time.
 
-Let's look at an example to see the issue, and get a hint at how to solve it. 
+Let's look at an example to see the issue, and get a hint at how to solve it.
 
-In the reachability example above, we update the query set `roots` by adding and removing elements. These changes look like 
+In the reachability example above, we update the query set `roots` by adding and removing elements. These changes look like
 
 	(root, time_1, +1)
 	(root, time_2, -1)
@@ -271,12 +271,12 @@ Imagine now that our frontier, the lower envelope of times we might yet see in t
 
 	{ (0, 3), (1, 2), (2, 0) } .
 
-Meanining, we may still see any time that is greater-or-equal to one of these times. While this does rule out times like `(0,1)` and `(0,2)`, it does *not* mean that we can just coalesce them. There is a difference between these two times, in that the possible future time `(2,1)` can tell them apart:
+Meaning, we may still see any time that is greater-or-equal to one of these times. While this does rule out times like `(0,1)` and `(0,2)`, it does *not* mean that we can just coalesce them. There is a difference between these two times, in that the possible future time `(2,1)` can tell them apart:
 
 	(0,1) <= (2,1) : true
 	(0,2) <= (2,1) : false
 
-So how then do we determine which times are equivalent to which others? Ideally, we would consult our notes, but this option is not available to us. We can do the next best thing, which is to look at [what we did in Naiad's implementation](https://github.com/MicrosoftResearch/Naiad/blob/release_0.5/Frameworks/DifferentialDataflow/LatticeInternTable.cs#L59-L74): 
+So how then do we determine which times are equivalent to which others? Ideally, we would consult our notes, but this option is not available to us. We can do the next best thing, which is to look at [what we did in Naiad's implementation](https://github.com/MicrosoftResearch/Naiad/blob/release_0.5/Frameworks/DifferentialDataflow/LatticeInternTable.cs#L59-L74):
 
 ```csharp
 /// <summary>
@@ -288,7 +288,7 @@ private T Advance(T s)
 {
     Debug.Assert(this.reachableTimes != null);
     Debug.Assert(this.reachableTimes.Count > 0);
-    
+
     var meet = this.reachableTimes.Array[0].Join(s);
     for (int i = 1; i < this.reachableTimes.Count; i++)
         meet = meet.Meet(this.reachableTimes.Array[i].Join(s));
@@ -297,11 +297,11 @@ private T Advance(T s)
 }
 ```
 
-Ok, this is *NOT* Rust. C-sharp is object-orientated, and has a `this` keyword that wraps some state local to whatever "this" is. It turns out "this" is a table of timestamps, whose values we update as `this.reachableTimes` advances. This `reachableTimes` thing is how Naiad refers to frontiers: timestamps that the operator can still receive. 
+Ok, this is *NOT* Rust. C-sharp is object-orientated, and has a `this` keyword that wraps some state local to whatever "this" is. It turns out "this" is a table of timestamps, whose values we update as `this.reachableTimes` advances. This `reachableTimes` thing is how Naiad refers to frontiers: timestamps that the operator can still receive.
 
 What the code tells us is that to determine what a time `s` should look like given a frontier, we should join `s` with each element in the frontier, and take its meet. If you aren't familiar with "join" and "meet", let's review those:
 
-* 	The **join** method determines the least upper bound of two arguments. That is, 
+* 	The **join** method determines the least upper bound of two arguments. That is,
 
 		a <= join(a,b), and
 		b <= join(a,b), and
@@ -334,7 +334,7 @@ Let's look at our example again. We have updates:
 	((a, c), +1) @ (1, 0)
 	((b, c), -1) @ (1, 1)
 
-and perhaps the frontier is currently 
+and perhaps the frontier is currently
 
 	{ (0, 3), (1, 2), (2, 0) } .
 
@@ -364,7 +364,7 @@ Now we get different results when we advance times, as the first term drops out 
 
 Ooooo! Now some things are starting to look the same! The two `(b,c)` updates in times `(0,1)` and `(1,1)` can now cancel.
 
-Imagine instead we closed our input, removing the possibility of new input epochs, setting the frontier to 
+Imagine instead we closed our input, removing the possibility of new input epochs, setting the frontier to
 
 	{ (0,3), (1,1) }
 
@@ -387,11 +387,11 @@ all of the updates we have can be aggregated. The meet of joins logic works seam
 
 Imagine we have a frontier F, is it true that the technique above (take the meets of joins) is correct? What would that even mean? Here is a correctness claim we might try to prove:
 
-	Claim (correctness): 
+	Claim (correctness):
 
-	For any frontier F and time s, let 
+	For any frontier F and time s, let
 
-	    t = meet_{f in F} join(f,s). 
+	    t = meet_{f in F} join(f,s).
 
 	then for all g >= F, we have s <= g iff t <= g.
 
@@ -409,9 +409,9 @@ Wow proofs are fun! Let's do another one!
 
 How about proving that this contraction is optimal? What would that even mean? Here is an optimality claim we might try and prove:
 
-	Claim (optimality): 
+	Claim (optimality):
 
-	For two times s1 and s2, if for all g >= F we have that 
+	For two times s1 and s2, if for all g >= F we have that
 
 		s1 <= g iff s2 <= g ,
 
@@ -425,13 +425,13 @@ Let's try and prove this.
 
 	Claim (maximality):
 
-	For two times s and t', if for all g >= F we have that 
+	For two times s and t', if for all g >= F we have that
 
-		s <= g iff t' <= g 
+		s <= g iff t' <= g
 
-	then 
+	then
 
-		t' <= meet_{f in F} join(f,s). 
+		t' <= meet_{f in F} join(f,s).
 
 What this claim says is that if you were thinking of contracting `s` to any time `t'` other than `meet_{f in F} join(f,s)`, your `t'` will have to be less or equal to ours. Our choice is "maximal", in that sense. This proves that we've done as well as we can, but it doesn't prove that if `s1` and `s2` are indistinguishable they result in the same contraction. Yet!
 
@@ -441,7 +441,7 @@ For all `f` (but in particular `f in F`) we have that `s <= join(f,s)` by the pr
 
 Now we can prove optimality, using maximality as help.
 
-First, let's define 
+First, let's define
 
 	t1 = meet_{f in F} join(f,s1), and
 	t2 = meet_{f in F} join(f,s2).
@@ -463,20 +463,20 @@ We now have an awesome rule for compacting differences, by advancing timestamps 
 
 We can apply this rule whenever we get a chance to rewrite bits of internal state. Our optimality result tells us that as long as we apply this rule regularly enough, we should be able to cancel any indistinguishable updates.
 
-For various reasons, including compaction, we will make sure we take this opportunity regularly. In the log-structured merge thing up above, each time we do a merge we can write new times out after subjecting them to this change. 
+For various reasons, including compaction, we will make sure we take this opportunity regularly. In the log-structured merge thing up above, each time we do a merge we can write new times out after subjecting them to this change.
 
 In principle, we could also use this rule to rewrite times within layers of the merge trie, though I'm a bit hesitant to do that without thinking harder about the implications of departing from the immutable realm.
 
 ### Problem 2: Poor scaling with small updates
 
-As we increase the number of workers, we hope to see a corresponding improvement in performance. This improvement can take a few different forms: 
+As we increase the number of workers, we hope to see a corresponding improvement in performance. This improvement can take a few different forms:
 
-*  	**Weak scaling:** 
+*  	**Weak scaling:**
 	As the number of workers increases, the amount of work that can be performed in a fixed time increases.
 
-	As best as I understand, differential dataflow does a fine job with weak scaling: more workers can do more work in a fixed amount of time. Increasing the amount of work does not need to increase the amount of coordination, as long as the number of batches do not increase. The downside here is that 
+	As best as I understand, differential dataflow does a fine job with weak scaling: more workers can do more work in a fixed amount of time. Increasing the amount of work does not need to increase the amount of coordination, as long as the number of batches do not increase. The downside here is that
 
-*  	**Strong scaling:** 
+*  	**Strong scaling:**
 	As the number of workers increases, the amount of time taken to perform a fixed amount of work decreases.
 
 	Adding more workers does not necessarily decrease the amount of time to perform a fixed amount of work. In the limit, when each batch has just a single record, the existence of additional workers simply does not offer anything of use; the single record goes to one worker who is then the only worker able to perform productive computation.
@@ -494,26 +494,26 @@ For any example of what I'm talking about, think about a sequence of ten updates
 	..
 	(datum_9, 9, +1)
 
-In our current implementation, these each have distinct times, and go into distict input batches. Each worker worries about the completion of each batch independently, and doesn't get started on batch 7 until all batches up to and including batch 6 have been confirmed processed.
+In our current implementation, these each have distinct times, and go into distinct input batches. Each worker worries about the completion of each batch independently, and doesn't get started on batch 7 until all batches up to and including batch 6 have been confirmed processed.
 
 It doesn't have to work this way (and doesn't, in some other systems).
 
 Timely dataflow certainly allows for multiple times in flight, and if we put all ten messages into the system and announce "done with rounds `0-9`", each differential dataflow operator will pick up various messages, let's say a worker picks up `datum_7`, and receives word from timely dataflow that all inputs up through round `9` are accounted for. The work isn't all done yet, but the operator now knows enough to get processing.
 
-Conceptually, we are going to take this approach, with some implementation details fixed. 
+Conceptually, we are going to take this approach, with some implementation details fixed.
 
 Timely dataflow's progress tracking machinery gets stressed out proportional to the number of distinct times that you use. Each distinct time needs to be announced to all other participants, so even if there is just one data record there would be `#workers` control messages sent out. This means that we shouldn't really send records at individual times. In addition, all sorts of internal buffering and such are broken on timestamp boundaries; all channel buffers get flushed, that sort of thing. We'd really like to avoid that.
 
-Fortunately, there is something simple and smart to do, lifted from timely dataflow's logging infrastructure. Rather than have each time with a distinct timestamp, we use just the smallest timestamp and send several records whose actual times are presented as data. For example, 
+Fortunately, there is something simple and smart to do, lifted from timely dataflow's logging infrastructure. Rather than have each time with a distinct timestamp, we use just the smallest timestamp and send several records whose actual times are presented as data. For example,
 
 	((datum_0, 0), 0, +1)
 	((datum_1, 1), 0, +1)
 	..
 	((datum_9, 9), 0, +1)
 
-Here we've sent the same data all with timestamp zero, but we have provided enough information to determine the actual time for each record. 
+Here we've sent the same data all with timestamp zero, but we have provided enough information to determine the actual time for each record.
 
-Let's call the actual timely dataflow timestamp the "message timestamp"; this is the one that is all zeros. Let's call the embedded timestamp the "data timestamp"; this ranges from zero up to nine in this example. The choice to have each data timestamp in the future of the message timestamp results in two important properties: 
+Let's call the actual timely dataflow timestamp the "message timestamp"; this is the one that is all zeros. Let's call the embedded timestamp the "data timestamp"; this ranges from zero up to nine in this example. The choice to have each data timestamp in the future of the message timestamp results in two important properties:
 
 1. Operators receive messages with a message timestamp that allows them to send messages with received data timestamp. Operators can safely "advance" any capability they hold, and in particular they can advance the message timestamp capability to be a capability for any data timestamp.
 
@@ -529,7 +529,7 @@ One very simple scheme fixes the lower-resolution timestamp to be something like
 
 This approach has one very appealing property, which is that because all workers use the same scaling, when timely dataflow indicates that time `i` has completed you know that all times up to `i+1` are complete. Not just `i` milliseconds, but anything strictly less than `i+1` milliseconds.
 
-The downside here is lack of flexibility. Perhaps in a millisecond we can accumulate thousands of records; we will have to wait for the millisecond to expire before we start processing them. 
+The downside here is lack of flexibility. Perhaps in a millisecond we can accumulate thousands of records; we will have to wait for the millisecond to expire before we start processing them.
 
 ##### Variable resolution
 
@@ -563,11 +563,11 @@ It would be great for timely dataflow to support lower-resolution timestamps for
 
 A collection represents a set of tuples of type `((Key, Val), Time, isize)`. If we were to write them down, the space requirements would be
 
-	size_of::<((Key, Val), Time, isize)>() * #(distinct (key,val,time)s) 
+	size_of::<((Key, Val), Time, isize)>() * #(distinct (key,val,time)s)
 
 because any tuples with the same `(key,val,time)` entries can be coalesced.
 
-But simply writing down the tuples is not the most efficient way to represent them. We have seen above the "trie" representation, which sorts tuples and compresses out common prefixes. For example, the trie representation would require 
+But simply writing down the tuples is not the most efficient way to represent them. We have seen above the "trie" representation, which sorts tuples and compresses out common prefixes. For example, the trie representation would require
 
 	  size_of::<(Key, usize)>() * #(distinct keys)
 	+ size_of::<(Val, usize)>() * #(distinct (key,val)s)
@@ -624,7 +624,7 @@ graph.join(&query, |k,v,_| (v.clone(), k.clone()))
 
 There is some excessive arrangement going on (e.g. `query` and the results of the first `join`) because the arranged operators only work on pairs of arrangements. This could be cleaned up if important, but it is assumed you know a bit about what you are doing at this point.
 
-If all of the code above makes little sense, it boils down to: whatever we do with our collection data structure, we need to worry that multiple operators may be looking at the same data. 
+If all of the code above makes little sense, it boils down to: whatever we do with our collection data structure, we need to worry that multiple operators may be looking at the same data.
 
 For example, in the context of one operator we can easily speak about "the frontier" and do compaction based on this information. When multiple operators are sharing the same data, there is no one frontier; there is a set of frontiers, or something like that. It can all be made to work (mostly you just union together the frontiers with `MutableAntichain`), but some attention to detail is important.
 
