--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -66,7 +66,7 @@ pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 
 Even just writing this much is helpful, because we have sorted out (or started too, at least) what needs to be true about the types we will use.
 
-### How about adding some methods? 
+### How about adding some methods?
 
 Yes, let's add some methods. There are two things most collections do: add data and get data. I'm going to write some over-simple versions of these that would be great, but lack some flexibility. Our data happens to be tuples `(key,val,time,delta)`, so we are going to add and retrieve vectors of those.
 
@@ -83,11 +83,11 @@ pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 }
 ```
 
-You may notice the `&` sigil hanging around in a few places. We will get to that, but what it is saying is that when we call `add` or `get`, we are only temporarily working with `self`, the trace. Once the method returns, control of `self` returns too. Similarly, the use of `key` is only temporary access to the key. 
+You may notice the `&` sigil hanging around in a few places. We will get to that, but what it is saying is that when we call `add` or `get`, we are only temporarily working with `self`, the trace. Once the method returns, control of `self` returns too. Similarly, the use of `key` is only temporary access to the key.
 
 This contrasts with `diffs` in `add`: there is no `&` in front of the type, which means that `diffs` is actually an *owned* vector; we get to do whatever we want with it (add things to it, de-allocate it, etc). This ownership is pretty handy, because it is transitive: `diffs` also owns all of the contents of the vector, meaning all those keys and values and times and stuff. We will want to put those in our collection!
 
-Looks pretty good! What's not to like? Well, there are a few things. 
+Looks pretty good! What's not to like? Well, there are a few things.
 
 ### Type parameters: letting the user choose
 
@@ -117,7 +117,7 @@ Before you get all "lol iterators", these type constraints mean that methods are
 
 What if the `get` method wants to return an iterator, but be coy about which specific iterator type it returns? It doesn't really make sense for the user to ask for an iterator type, because it is the implementation that has to determine what gets returned. Rather, it makes sense for the implementation to define the type of the result.
 
-In Rust traits may define "associated types", which are a bit dual to the generic type parameters that users get to specify. These are types that the implementor of the trait determines, and other than constraints on the types nothing else is exposed through the interface of the trait. We can indicate that an implementor of `Trace` must name a type for the output of `get` and that this type must implement the `Iterator` trait with approriate items, just like so:
+In Rust traits may define "associated types", which are a bit dual to the generic type parameters that users get to specify. These are types that the implementor of the trait determines, and other than constraints on the types nothing else is exposed through the interface of the trait. We can indicate that an implementor of `Trace` must name a type for the output of `get` and that this type must implement the `Iterator` trait with appropriate items, just like so:
 
 ```rust
 pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
@@ -165,7 +165,7 @@ pub trait Trace<Key: Ord, Val: Ord, Time: Lattice> {
 }
 ```
 
-We just put `&` in front of the results in the `OutputIterator` contraint. Aside: I didn't put a reference in front of the `isize` because we know we can always just copy that data.
+We just put `&` in front of the results in the `OutputIterator` constraint. Aside: I didn't put a reference in front of the `isize` because we know we can always just copy that data.
 
 This doesn't work, and Rust tries to help us out by saying:
 
@@ -185,7 +185,7 @@ For each reference you take, Rust infers the span of code for which the referenc
 	fn get(&mut self, key: &Key) -> Vec<(&Key, &Val, &Time, isize)>;
 ```
 
-This almost works. If it weren't for that `key` argument, Rust *would* be able to figure out the lifetimes of our outputs. 
+This almost works. If it weren't for that `key` argument, Rust *would* be able to figure out the lifetimes of our outputs.
 
 Why? Because the only things the results could possibly refer *to* are the references supplied as inputs (or references available through them, transitively). What else could these reference possibly refer to that will still be valid after the method returns?
 
@@ -196,11 +196,11 @@ What is going on here, or would be going on without the `key` argument, is what 
 	fn get<'a, 'b>(&'a mut self, key: &'b Key) -> Vec<(&'a Key, &'a Val, &'a Time, isize)>;
 ```
 
-Whoooooaaaaa! All of the `&` things have some more noise around them! 
+Whoooooaaaaa! All of the `&` things have some more noise around them!
 
 The most important thing to notice above is that `get` has two generic parameters, `'a` and `'b`, which are lifetime parameters. Their roles are to capture the lifetime information about the references supplied by the caller, and to say that in the vector of results, all those references have the same lifetime as the `self` reference rather than the `key` reference.
 
-This makes a lot of sense, right? The references are totally into the trace, rather than at the query key. It's cool, all we need to do is tell Rust that. In exchange, Rust will make sure no one accidentally puts `key` into the result vector, as its referrent might get mutated or invalidated as we spin around a loop. 
+This makes a lot of sense, right? The references are totally into the trace, rather than at the query key. It's cool, all we need to do is tell Rust that. In exchange, Rust will make sure no one accidentally puts `key` into the result vector, as its referent might get mutated or invalidated as we spin around a loop.
 
 You wouldn't do that, of course. I trust you, but Rust doesn't.
 
@@ -223,7 +223,7 @@ pub trait Trace<'a, Key: Ord, Val: Ord, Time: Lattice> {
 
 You might be a bit stressed that "how can we known which `'a` we will need" to which the answer is just "no worries, we will implement the trait for all `'a`", which is a great thing that computers can do.
 
-What is the last remaining issue? The types parameters `Key`, `Val`, and `Time` need some more constraints on them now. 
+What is the last remaining issue? The types parameters `Key`, `Val`, and `Time` need some more constraints on them now.
 
 	src/lib.rs:33:1: 66:2 error: the parameter type `Key` may not live long enough [E0309]
 	src/lib.rs:33 pub trait Trace<'a, Key: Ord, Val:Ord, Time: Lattice> {
@@ -267,13 +267,13 @@ To implement a trait for a type, here a hashmap from keys of type `K` to vectors
 
 ```rust
 impl<'a, K, V, T> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
-	
+
 	// implementation of methods and stuff goes here
 
 }
 ```
 
-We just need to add constraints on the type parameters and implement the methods, and we should be good to go. 
+We just need to add constraints on the type parameters and implement the methods, and we should be good to go.
 
 ### Implementing the methods
 
@@ -297,7 +297,7 @@ These `unimplemented!()` things are macros indicating the code isn't written yet
 
 #### The `add` method
 
-Here is what I would do for the `add` method: 
+Here is what I would do for the `add` method:
 
 ```rust
 	fn add<Iter: Iterator<Item=(K, V, T, isize)>>(&mut self, diffs: Iter) {
@@ -333,9 +333,9 @@ This looks up `key` in `self` and returns an `Option<&'a Vec<(V, T, isize)>>`. W
 
 The problem is we don't have a `&'a K` anywhere. That `key` argument is a reference, but not with the right lifetime (remember the cautionary tale from the previous section?). The key obviously exists in the `HashMap`, but we can't get a reference to it because `HashMap`'s interface is a bit restrictive. There is a way to get a reference to a key once you've used the `entry` method up above, but that requires an owned key to call in the first place. We can't even stash a second copy of the key in the list with the `(V, T, isize)` tuples because we can't copy or clone it.
 
-Sucks. 
+Sucks.
 
-We could consider changing the iterator in the trait definition to be 
+We could consider changing the iterator in the trait definition to be
 
 ```rust
 	Iter: Iterator<Item=(&'a V, &'a T, isize)>
@@ -343,7 +343,7 @@ We could consider changing the iterator in the trait definition to be
 
 because we know that users must have a `&K` on hand to call the `get` method. That isn't a horrible idea, but it is limiting; the user has to make sure to match up their keys with the iterators' values, even though we have a reference to the right key in the hash map.
 
-Since we aren't acutally going to use this version of the code, let's imagine that the `HashMap`'s `get` method return a reference to both the key and the value, rather than just the value. We still get to write:
+Since we aren't actually going to use this version of the code, let's imagine that the `HashMap`'s `get` method return a reference to both the key and the value, rather than just the value. We still get to write:
 
 ```rust
 	fn get(&'a mut self, key: &K) -> Self::OutputIterator {
@@ -355,7 +355,7 @@ because we are just passing the buck to the `OutputIterator` type's `new` method
 
 ### Implementing the types
 
-The `OutputIterator` type isn't going to be wildly complicated. In fact, we could possibly borrow some existing iterator implementations, but we will just roll our own to see how it works. 
+The `OutputIterator` type isn't going to be wildly complicated. In fact, we could possibly borrow some existing iterator implementations, but we will just roll our own to see how it works.
 
 The first thing to do is to define the struct that holds the data we will need for iteration.
 
@@ -366,7 +366,7 @@ pub struct OutputIter<'a, K:'a, V:'a, T:'a> {
 }
 ```
 
-The `data` field here is, optionally, a triple of: key reference, vector reference, and a `usize` for remembering where we are in the vector. As we advance through the iterator we will increment this `usize`, and stop when it reaches the length of the vector. 
+The `data` field here is, optionally, a triple of: key reference, vector reference, and a `usize` for remembering where we are in the vector. As we advance through the iterator we will increment this `usize`, and stop when it reaches the length of the vector.
 
 The field is an `Option` type, which can either be `Some(x)` for some data `x`, or `None` indicating that there is nothing there. The option is important here because `get` does need to return a valid instance of `OutputIter` even when the key is absent and no `&'a K` even exists. We could change our `get` trait to return an `Option<Self::OutputIterator>`, or we can just make our iterator return nothing.
 
@@ -399,7 +399,7 @@ impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
 }
 ```
 
-An implementation needs to indicate the type of the `Item` it will enumerate, and a function that produces the next item or `None` if the iterator has finished. 
+An implementation needs to indicate the type of the `Item` it will enumerate, and a function that produces the next item or `None` if the iterator has finished.
 
 ```rust
 impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
@@ -424,9 +424,9 @@ impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
 }
 ```
 
-The `if let` construction is a neat thing Rust borrowed from Swift (perhaps "copied" would be more accurate, or "cloned" depending on your views on whether ideas have owners). The construct fires if the pattern matches, in this case if `self.data` is in fact something. At the same time, it binds `key`, `vec`, and `pos` to references to the fields of the something. In the case of `pos` it is even a mutable reference. The `ref` keyword might be a bit confusing, but I guess the Rust folks thought it was better than `*`, which is logically what you want there (bind `key`, `val`, `pos` to things that derefence to the fields).
+The `if let` construction is a neat thing Rust borrowed from Swift (perhaps "copied" would be more accurate, or "cloned" depending on your views on whether ideas have owners). The construct fires if the pattern matches, in this case if `self.data` is in fact something. At the same time, it binds `key`, `vec`, and `pos` to references to the fields of the something. In the case of `pos` it is even a mutable reference. The `ref` keyword might be a bit confusing, but I guess the Rust folks thought it was better than `*`, which is logically what you want there (bind `key`, `val`, `pos` to things that dereference to the fields).
 
-This trait implementation is all it takes to be an iterator. 
+This trait implementation is all it takes to be an iterator.
 
 If you use this type in your code, perhaps by calling `get` on our `HashMap` implementation of `Trace`, Rust will go track down this code and use it directly. For example, imagine your value and time types are stack-allocated, like maybe `u64`s or something, and you write the following code:
 
@@ -443,7 +443,7 @@ That's pretty neat. It's the sort of thing you might implement by hand in other 
 
 ### The implementation
 
-In addition to the definition and implementation of `OutputIter`, here is our implementation of `Trace`. 
+In addition to the definition and implementation of `OutputIter`, here is our implementation of `Trace`.
 
 ```rust
 impl<'a, K:Ord+'a, V:Ord+'a, T:Lattice+'a> Trace<'a, K, V, T> for HashMap<K, Vec<(V, T, isize)>> {
@@ -491,7 +491,7 @@ Here is our noble data structure, a list of lists:
 pub struct Lists<K, V, T> {
 	lists: Vec<Vec<(K, V, T, isize)>>,
 }
-``` 
+```
 
 We will set this up so that the largest lists come first, and smaller lists later on. This makes it easy to push and pop things at the end of the list, which is a bit easier for Rust (whose `Vec` type supports vacancies at the end of its allocation, but not at the beginning).
 
@@ -501,7 +501,7 @@ We now have some functions to implement, naïvely of course, for the `Trace` tra
 
 #### Adding elements
 
-We can be a bit lazy for now and make adding elements relatively simple. Let's do that, and we will improve the behavior once we start looking at performance (just a bit further down this section). 
+We can be a bit lazy for now and make adding elements relatively simple. Let's do that, and we will improve the behavior once we start looking at performance (just a bit further down this section).
 
 ```rust
 fn add<Iter: Iterator<Item=(K,V,T,isize)>>(&mut self, diff: Iter) {
@@ -548,7 +548,7 @@ fn get(&'a mut self, key: &K) -> Self::OutputIterator {
 }
 ```
 
-This is what you might imagine, except that if you are familiar with Rust you might be surprised that `binary_search` is used as a free method, rather than using `list.binary_search(key)`. Unfortunately, Rust's binary search method doesn't find the *first* matching element, just *a* matching element. To find the actual range we would need to search backwards and forwards, which goes against our "don't scan the elements unless asked". 
+This is what you might imagine, except that if you are familiar with Rust you might be surprised that `binary_search` is used as a free method, rather than using `list.binary_search(key)`. Unfortunately, Rust's binary search method doesn't find the *first* matching element, just *a* matching element. To find the actual range we would need to search backwards and forwards, which goes against our "don't scan the elements unless asked".
 
 Fortunately it is easier to write your own binary search than it is to work around Rust's quirky behavior.
 
@@ -582,7 +582,7 @@ All we need to do now is sort out the `OutputIter` type and we should be set!
 
 #### Iterating outputs
 
-Our `OutputIter` will have a list of sorted slices, and walk through each of them in no particular order. We will improve the order later on. 
+Our `OutputIter` will have a list of sorted slices, and walk through each of them in no particular order. We will improve the order later on.
 
 ```rust
 pub struct OutputIter<'a, K:'a, V:'a, T:'a> {
@@ -643,7 +643,7 @@ Before we get started, I ran the computation with a `HashMap<K, Vec<(V,T,isize)>
 	throughput: 8137500.97 elts/sec @ 523000000 elts
 	throughput: 8136678.71 elts/sec @ 524000000 elts
 
-At this point the process crossed the 16GB threshold and I stopped the experiment. But, we have a starting baseline for insertion throughput: between 8 and 16 million elements per second. You could probably do better, for example [here is a fun read](https://infosys.uni-saarland.de/publications/ARCD15.pdf) where they are worried about a lot more keys than I used (them: 16M, 256M, 1B; here: 1K). 
+At this point the process crossed the 16GB threshold and I stopped the experiment. But, we have a starting baseline for insertion throughput: between 8 and 16 million elements per second. You could probably do better, for example [here is a fun read](https://infosys.uni-saarland.de/publications/ARCD15.pdf) where they are worried about a lot more keys than I used (them: 16M, 256M, 1B; here: 1K).
 
 Just to set the scale, in case you would like to compare to their Figures 2 and 3, which report 20 million inserts per second, here are some `HashMap` numbers with 16M keys:
 
@@ -675,7 +675,7 @@ These numbers start a bit shaky and improve, probably because for the first 16 m
 
 This falls over quite a bit earlier, because the hash map has a fair amount of per-key state. We could try one billion keys, but you'll notice that we only managed 122 million insertions above, so we didn't even get the opportunity to repeat a key. The same thing should happen with one billion keys.
 
-So, depending on the numbers of keys we see a range of throughputs with the very simple `HashMap` implementation: from just shy of two million inserts per second, up to 16 million inserts per second. The [linked paper](https://infosys.uni-saarland.de/publications/ARCD15.pdf) shows a pretty consistent 20 million single-threaded inserts per second, even with large numbers of keys, through engineering and possibly some different assumptions. 
+So, depending on the numbers of keys we see a range of throughputs with the very simple `HashMap` implementation: from just shy of two million inserts per second, up to 16 million inserts per second. The [linked paper](https://infosys.uni-saarland.de/publications/ARCD15.pdf) shows a pretty consistent 20 million single-threaded inserts per second, even with large numbers of keys, through engineering and possibly some different assumptions.
 
 ##### Our most naïve implementation
 
@@ -715,15 +715,15 @@ fn merge<T: Ord>(source1: Vec<T>, source2: Vec<T>) -> Vec<T> {
 	// while comparisons remain, do them and move elements.
 	while iter1.peek().is_some() && iter2.peek().is_some() {
 		match iter1.peek().unwrap().cmp(&iter2.peek().unwrap()) {
-			::std::cmp::Ordering::Less => { 
-				result.push(iter1.next().unwrap()); 
+			::std::cmp::Ordering::Less => {
+				result.push(iter1.next().unwrap());
 			},
-			::std::cmp::Ordering::Equal => { 
-				result.push(iter1.next().unwrap()); 
-				result.push(iter2.next().unwrap()); 
+			::std::cmp::Ordering::Equal => {
+				result.push(iter1.next().unwrap());
+				result.push(iter2.next().unwrap());
 			}
-			::std::cmp::Ordering::Greater => { 
-				result.push(iter2.next().unwrap()); 
+			::std::cmp::Ordering::Greater => {
+				result.push(iter2.next().unwrap());
 			}		
 		}
 	}
@@ -750,11 +750,11 @@ If we replace the `buffer.extend(..)` line with `buffer = merge(buffer, ...)` an
 	throughput: 4087287.71 elts/sec @ 523000000 elts
 	throughput: 4091650.69 elts/sec @ 524000000 elts
 
-It falls over a later on because `merge` allocates half as much memory as `buffer.sort()`. 
+It falls over a later on because `merge` allocates half as much memory as `buffer.sort()`.
 
 We are now doing better than the many-keys `HashMap` numbers, though not as good as the thousand-keys numbers. This feels pretty good, though if we were to consider lookup times the feeling would pass.
 
-So that we can feel even better about ourselves before we close out our discussion of the very naïve version, let's test a feature that we will eventually want: consolidation of weights for elements with the same `(key,val,time)` fields. As part of `merge`, we can compare just the `(K, V, T)` part of each record, and add weights if they are the same rather than returning both elements. 
+So that we can feel even better about ourselves before we close out our discussion of the very naïve version, let's test a feature that we will eventually want: consolidation of weights for elements with the same `(key,val,time)` fields. As part of `merge`, we can compare just the `(K, V, T)` part of each record, and add weights if they are the same rather than returning both elements.
 
 Let's advance the time every round (one million records) rather than for every record and see what happens:
 
@@ -779,7 +779,7 @@ Ok, now we are talking. Twenty million inserts per second. This should actually 
 
 What happened? The data are a bit degenerate, with exactly as many keys as values, there are only one thousand distinct values in that million elements, all with the same time. They get compacted quite well! Each round of one million inserts is compacted down to one thousand, before being merged with any older elements.
 
-This is perhaps an interesting representation of what a hot set of updates might look like, with periodic transitions to new hot elements. Perhaps not. 
+This is perhaps an interesting representation of what a hot set of updates might look like, with periodic transitions to new hot elements. Perhaps not.
 
 We can do a different experiment where we have 16 million keys, one value, and one timestamp, something like the 16 million key example above where we are able to update in place.
 
@@ -811,7 +811,7 @@ Looking things up is going to be slow. We are going to improve it later on (hint
 
 Our next stop is organizing our data even further. Sorted lists are pretty organized already, but there is still room to improve the representation and make our lives easier. The main thing that sorted lists don't reveal to use is "where do we find those tuples with a indicated key, or key and value?"
 
-Our new representation of a sorted sequence of `(K, V, T, isize)` maintains three lists: 
+Our new representation of a sorted sequence of `(K, V, T, isize)` maintains three lists:
 
 1.	A list of `(T, isize)` pairs, with one entry for each entry in our original list.
 
@@ -847,9 +847,9 @@ Each `Trie<K, V, T>` is equivalent to one of our ordered lists `Vec<(K, V, T, is
 pub struct Tries<K, V, T> {
 	layers: Vec<Trie<K, V, T>>,
 }
-``` 
+```
 
-We now get to re-write a few things, most notably the merge logic for tries. 
+We now get to re-write a few things, most notably the merge logic for tries.
 
 Merging tries is going to be more painful than merging sorted lists, but some things are simpler (for the computer, not for us). When we see a key in one trie but not another we can just copy its associated contents over. We don't have to pay a per-tuple comparison cost, as we did when we merged sorted lists. If we end up with two of the same keys, we can do the same thing for values: if a value is in one trie but not the other, just copy its `(T, isize)` history over. A lot of merge logic can be replaced with something that looks more like a `memcpy`.
 
@@ -871,9 +871,9 @@ The first thing we are going to do is take each trie, which contains three vecto
 
 ```rust
 let mut keys1 = trie1.keys.into_iter()
-						  .scan(0, |sum, (key, off)| { 
-						      let cnt = off - *sum; 
-						      *sum = off; 
+						  .scan(0, |sum, (key, off)| {
+						      let cnt = off - *sum;
+						      *sum = off;
 						      Some((key, cnt))
 						  })
 						  .peekable();
@@ -901,7 +901,7 @@ for (key, key_cnt) in keys2 { unimplemented!() }
 result
 ```
 
-I've not put the logic in yet, because the complete thing is pretty large. Instead, let's look at each fragment one piece at a time. 
+I've not put the logic in yet, because the complete thing is pretty large. Instead, let's look at each fragment one piece at a time.
 
 The logic for the cases where the keys are *in*equal is not horrible. We want to copy the key, values, and histories into `result`. Here is the code for the `Ordering::Less` case, where we want to read out of the iterators derived from `trie1`.
 
@@ -975,18 +975,18 @@ let mut hist2 = hist2.by_ref().take(val2_cnt).peekable();
 
 while hist1.peek().is_some() && hist2.peek().is_some() {
 	match hist1.peek().unwrap().0.cmp(&hist2.peek().unwrap().0) {
-		Ordering::Less => { 
-			result.hist.push(hist1.next().unwrap()); 
+		Ordering::Less => {
+			result.hist.push(hist1.next().unwrap());
 		}
-		Ordering::Equal => { 
+		Ordering::Equal => {
 			let (time, delta1) = hist1.next().unwrap();
 			let (____, delta2) = hist2.next().unwrap();
 			if delta1 + delta2 != 0 {
 				result.hist.push((time, delta1 + delta2));
 			}
 		}
-		Ordering::Greater => { 
-			result.hist.push(hist2.next().unwrap()); 
+		Ordering::Greater => {
+			result.hist.push(hist2.next().unwrap());
 		}
 	}
 }
@@ -1001,11 +1001,11 @@ if result.hist.len() > hist_len {
 
 Ok! I think we are done with that. Well done sticking through with us.
 
-You might have notice that we wrote the same sort of code a lot, over and over. It's true. Could we possibly re-factor this a bit and make something more general? Yes! In fact, there is already a crate that does this and some other cool things, over at [frankmcsherry/trie](https://github.com/frankmcsherry/trie). 
+You might have notice that we wrote the same sort of code a lot, over and over. It's true. Could we possibly re-factor this a bit and make something more general? Yes! In fact, there is already a crate that does this and some other cool things, over at [frankmcsherry/trie](https://github.com/frankmcsherry/trie).
 
 Apparently the code is just faster that what we've written, too. More on that later.
 
-### Iterating over data 
+### Iterating over data
 
 Recall that our iterator interface for the `Trace` trait looks like so:
 
@@ -1086,9 +1086,9 @@ The latter of these two requires the existence of an actual `(K, V, T, isize)` t
 
 I assert that look-up times are only going to get better with `Tries` as opposed to `Lists`, so lets hold off evaluating look-ups for either of these until we get to the next installment. The short, qualitative version is that we just need to do binary search in the `Vec<(K, usize)>` list, which can be much, much smaller that the full `Vec<(K, V, T, isize)>` list of all tuples, and is never larger (because `usize` is the same size as `isize`).
 
-Instead, for now let's try out insertion throughput. 
+Instead, for now let's try out insertion throughput.
 
-We have made a few important changes, mostly in streamlining the merge process, but also in potentially moving around less data, because each trie compresses the data a little bit. If we have lots of repeated keys and values, we end up copying each only once, and reduce our data movement from `(K, V, T, isize)` tuples down to just `(T, isize)` pairs. This is great news for relatively large-ish keys and values. At the same time, if every key and value are distinct, we've only added a few new `usize` fields for each record, and a bunch of crazy logic. 
+We have made a few important changes, mostly in streamlining the merge process, but also in potentially moving around less data, because each trie compresses the data a little bit. If we have lots of repeated keys and values, we end up copying each only once, and reduce our data movement from `(K, V, T, isize)` tuples down to just `(T, isize)` pairs. This is great news for relatively large-ish keys and values. At the same time, if every key and value are distinct, we've only added a few new `usize` fields for each record, and a bunch of crazy logic.
 
 We should see better performance in some cases, and worse performance in others!
 
@@ -1126,7 +1126,7 @@ These computations always hit the inner merge logic, but fortunately in this cas
 
 These arguments, 1000 keys and 1000 values, mean that there really is only one value for each key, equal to itself. Each trie that we merge has the same properties, so we still spend our time doing lots of merges, just on `(T, isize)` elements rather than full `(K, V, T, isize)` tuples. I was expecting to see some performance improvement.
 
-As it turns out, we do see improved performance when using the [trie crate](https://github.com/frankmcsherry/trie). 
+As it turns out, we do see improved performance when using the [trie crate](https://github.com/frankmcsherry/trie).
 
 	Echidnatron% cargo run  --release --bin profile-insert -- 1000 1000 1000 1000 trie-crate
 	     Running `target/release/profile-insert 1000 1000 1000 1000 trie-crate`
@@ -1282,23 +1282,23 @@ I made fun of Rust for some slowness that I attributed to crappy iterator abstra
 
 Specifically, the [trie crate](https://github.com/frankmcsherry/trie) gets better performance than iterator-based merging, but it also has an algorithmic improvement I failed to mention. Rather, I remembered it, but I didn't realize that it would be relevant, so I cut the text talking about how clever it was. Apparently it was clever, so points awarded to past me, deducted from present me.
 
-The merge implementation in the trie crate does something potentially clever in the not-equals cases. Let's pick the shortest (and most relevent) example from the code we wrote above, the inner loop where we merge histories. 
+The merge implementation in the trie crate does something potentially clever in the not-equals cases. Let's pick the shortest (and most relevant) example from the code we wrote above, the inner loop where we merge histories.
 
 ```rust
 while hist1.peek().is_some() && hist2.peek().is_some() {
 	match hist1.peek().unwrap().0.cmp(&hist2.peek().unwrap().0) {
-		Ordering::Less => { 
-			result.hist.push(hist1.next().unwrap()); 
+		Ordering::Less => {
+			result.hist.push(hist1.next().unwrap());
 		}
-		Ordering::Equal => { 
+		Ordering::Equal => {
 			let (time, delta1) = hist1.next().unwrap();
 			let (____, delta2) = hist2.next().unwrap();
 			if delta1 + delta2 != 0 {
 				result.hist.push((time, delta1 + delta2));
 			}
 		}
-		Ordering::Greater => { 
-			result.hist.push(hist2.next().unwrap()); 
+		Ordering::Greater => {
+			result.hist.push(hist2.next().unwrap());
 		}
 	}
 }
@@ -1348,7 +1348,7 @@ And next with the new merge:
 	throughput: 4568167.76 elts/sec @ 523000000 elts
 	throughput: 4572768.42 elts/sec @ 524000000 elts
 
-Finally, the trie crate implementation (copy/pasted from above): 
+Finally, the trie crate implementation (copy/pasted from above):
 
 	Echidnatron% cargo run  --release --bin profile-insert -- 1000 1000 1000 1000 trie-crate
 	     Running `target/release/profile-insert 1000 1000 1000 1000 trie-crate`
@@ -1482,7 +1482,7 @@ How about our trie implementation, which has keys separate from the bulk of the 
 	throughput: 1453179.99 elts/sec @ 1047000000 elts
 	throughput: 1554332.47 elts/sec @ 1048000000 elts
 
-We are up in the millions of lookups per second again, though nowhere near the 35-40 million per second that `HashMap` does for the same number of keys. One thing to note, perhaps, is that at 524 million we have a big consolidation of lists; we move from one list at each power-of-two length, to one larger one. This is why the other techniques bail at this point. Here we notice a marked improvement in query latency, as the number of lists to search drops substantially. 
+We are up in the millions of lookups per second again, though nowhere near the 35-40 million per second that `HashMap` does for the same number of keys. One thing to note, perhaps, is that at 524 million we have a big consolidation of lists; we move from one list at each power-of-two length, to one larger one. This is why the other techniques bail at this point. Here we notice a marked improvement in query latency, as the number of lists to search drops substantially.
 
 	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 tries
 	     Running `target/release/profile-lookup 16000000 1000 1000 1000 tries`
@@ -1597,7 +1597,7 @@ Sorting doesn't much help a `HashMap`, in that it intentionally maps nearby keys
 
 ### Building an index
 
-Can we combine the best of both worlds: the look-up speed of a `HashMap` and the density of `Tries`? 
+Can we combine the best of both worlds: the look-up speed of a `HashMap` and the density of `Tries`?
 
 Yes, both in a fairly simple and direct way, and in a more sophisticated and only barely highlighted here way.
 
@@ -1682,11 +1682,11 @@ So far we have used the fact that keys are ordered to provide *some* order on ke
 
 There are several hash map implementations, I'm thinking specifically of [Robin Hood Hashing](https://cs.uwaterloo.ca/research/tr/1986/CS-86-14.pdf), that maintain their set of `(key, val)` pairs in a flat array ordered by `(hash(key), key)`. The pairs are ordered by hash value, dropped in at locations proportional to each's hash, which is how given just its hash value we can zip to where a key should be. If there are collisions, we just scan forward until we either find the key or a value with a larger hash or key.
 
-We can choose to order keys by `(hash(key), key)` throughout, and replace our use of dense `Vec<(K, usize)>` arrays with slightly sparser Robin Hood hash maps. Each binary search is now replaced by a hash map look up. 
+We can choose to order keys by `(hash(key), key)` throughout, and replace our use of dense `Vec<(K, usize)>` arrays with slightly sparser Robin Hood hash maps. Each binary search is now replaced by a hash map look up.
 
-Alternately, we can follow the suggestion above and replace *all* `Vec<(K, usize)>` entries with a single hash map containing their associated data. Using something like a Robin Hood hash map, we still maintain a relatively well packed vector with a clear order on keys, 
+Alternately, we can follow the suggestion above and replace *all* `Vec<(K, usize)>` entries with a single hash map containing their associated data. Using something like a Robin Hood hash map, we still maintain a relatively well packed vector with a clear order on keys,
 
-I think this sounds like a great idea, but my Robin Hood hash map implemenation is a bit dusty. I'm travelling a bit in the next few days, so I'm going to take some time to clean up code and see what things look like. No performance numbers combining things just yet.
+I think this sounds like a great idea, but my Robin Hood hash map implementation is a bit dusty. I'm traveling a bit in the next few days, so I'm going to take some time to clean up code and see what things look like. No performance numbers combining things just yet.
 
 ## Part 5: Navigation rather than enumeration.
 
